Updated by task 'AutomatedMDTask_1644949863560_TM-MT_1644949888593'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/281809108c987ae9ba176a3da66185435f7cdd70

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器5.0.1发行说明
 description: Scene7查看器5.0.1发行说明
 solution: Experience Manager
-title: Scene7查看器5.0.1发行说明
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '929'
+source-wordcount: '926'
 ht-degree: 0%
 
 ---
@@ -16,11 +16,11 @@ ht-degree: 0%
 
 ## Adobe Scene7查看器 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在我们的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
+查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe的暂存服务器的说明：
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对我们的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
+在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
 ## 新增功能和更改 {#section-405e47e202e54943bd843d82415c91cb}
 
@@ -28,7 +28,7 @@ ht-degree: 0%
 
 * Windows操作系统的最低系统要求现在为Windows 7。
 * Internet Explorer的最低系统要求现在为版本9。
-* Mac OS的最低系统要求现在为Mac OS 10.8。
+* macOS的最低系统要求现在为macOS 10.8。
 * Safari的最低系统要求现在为版本6。
 
 重构了以下内容：
@@ -40,9 +40,9 @@ ht-degree: 0%
 
 * Adobe Analytics视频将报告给视频查看器和混合媒体查看器。
 * 在同一页面上跟踪多个查看器的事件。
-* 向“视频查看器”和“混合媒体查看器”添加了`SetIndicator`，以便直观地显示移动设备上的色板。
-* 向MixedMediaViewer中添加了`SetIndicator`以直观地显示移动设备上的色板。
-* 添加了`getComponent` API以允许外部访问查看器组件。
+* 添加了 `SetIndicator` 到视频查看器和混合媒体查看器，以便在移动设备上以可视方式显示色板。
+* 添加了 `SetIndicator` 到MixedMediaViewer，以便以可视方式显示移动设备上的色板。
+* 添加了 `getComponent` 允许外部访问查看器组件的API。
 * 查看器，用于作为单个JSON对象传递的配置参数。
 * WebVTT字幕将作为JSON对象传递，无需规则集配置。
 * eCatalog Viewer中用于链接图像的JavaScript模板会映射到外部页面。
@@ -55,10 +55,10 @@ ht-degree: 0%
 * 用于响应式设计时用于设置图像重新加载断点的FlyoutZoomView 。
 * 添加了对调整音量的点击支持。
 * SpinView和ZoomView，在不与查看器交互时，将手势应用于嵌入网页。
-* 向SpinView和ZoomView添加了`unload()` API，以允许在运行时处理组件。
+* 添加了 `unload()` 用于SpinView和ZoomView的API，允许在运行时处理组件。
 * 在与查看器不进行交互时，用于将手势应用于嵌入网页的视频查看器。
 * 初始缩放区域的缩放视图。
-* 当无法缩放时，ZoomView将隐藏`IconEffect`组件
+* 要隐藏的缩放视图 `IconEffect` 组件。
 
 修复了以下错误：
 
@@ -90,35 +90,33 @@ ht-degree: 0%
 
 **Adobe Analytics培训**
 
-* 将Scene7查看器与基于s_code.jsp的Adobe Analytics跟踪结合使用时，将发送所有跟踪事件的“page”请求，而不是“track”请求。 这会导致包含Scene7查看器的页面的页面查看量度夸大。 要解决此问题，请将AppMeasurementBridge.jsp的内容复制到要与查看器页面一起提供的Javascript文件中。 在生成的Javascript中，对于除LOAD事件以外的所有事件，所有对s.t()的调用都将替换为s.tl()。 此问题不会影响使用新的Scene7视频心率报表的Adobe Analytics视频查看器。
+* 将Dynamic Media查看器与Adobe Analytics跟踪结合使用时，基于 `s_code.jsp`，则会发送所有跟踪事件的“页面”请求，而不是“跟踪”请求。 此过程会导致包含Dynamic Media查看器的页面的页面查看量度过高。 要解决此问题，请将AppMeasurementBridge.jsp的内容复制到要与查看器页面一起提供的JavaScript文件中。 在生成的JavaScript中，替换 `s.t()` with `s.tl()` ，以用于除LOAD事件以外的所有事件。 此问题不会影响使用新的Scene7视频心率报表的Adobe Analytics视频查看器。
 * Internet Explorer:在启用Adobe Analytics跟踪的情况下，使用SSL / HTTPS时发生“拒绝访问”JavaScript错误。
 
 **eCatalog查看器**
 
 * 不支持图像映射中的JavaScript模板。
 * 导航到另一个HTML页面，然后返回有时会导致查看器重置回第一个页面。
-* 将`ImageMapEffect`滚动修饰符设置为`1`以调用infopanel。
-
-* `Frametransition` 设置 `none` 为 `fade` 或不受支持。
-
+* 已设置 `ImageMapEffect` 将修饰符滚动到 `1` 调用信息面板。
+* `Frametransition` 设置为 `none` 或 `fade` 不支持。
 * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
 * 内部仅链接到多页面跨页中最左侧的页面。 在纵向模式下影响移动设备。
 * InitalFrame仅链接到多页跨页中最左侧的页面。 在纵向模式下影响移动设备。
 
 **混合媒体查看器**
 
-* 目前不支持音轨播放。
+* 当前不支持音轨播放。
 
 **社交查看器**
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符应具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符必须具有绝对URL。
 
 **视频查看器**
 
-* 海报图像可能会遇到“最大大小”错误。 用户可能需要提高图像服务发布的限制设置。
+* 海报图像可能会遇到“最大大小”错误。 在这种情况下，用户必须提高图像服务发布的限制设置。
 * 如果视频字幕托管的HTML页面来自外部服务器(而非Scene7服务器)，则需要公司规则集。 请联系Adobe技术支持以获取帮助。
-* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比
-* 在iPad或Android设备上，可能会显示黑帧而不是海报图像。
-* 在iPad或Android设备上加载查看器期间，黑帧可能会在屏幕上闪烁。
+* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
+* 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
+* 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
 * 当在iPad设备上将背景设置为白色/透明时，VideoPlayer组件的侧面会显示黑色边框。
-* 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
+* 使用iOS 7,iPad上的最后一帧视频可能会失真。
