--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器5.4.2发行说明
 description: Scene7查看器5.4.2发行说明
 solution: Experience Manager
-title: Scene7查看器5.4.2发行说明
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '820'
+source-wordcount: '817'
 ht-degree: 0%
 
 ---
@@ -16,34 +16,34 @@ ht-degree: 0%
 
 ## Adobe Scene7查看器 {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
-查看器升级通常向后兼容。 在此版本中，查看器更改了命名空间支持。 因此，所有现成的查看器预设都进行了更新，以反映此更改。 但是，如果您创建了自己的自定义查看器预设，则查看器可能会显示问题，并需要根据以下已知问题更新CSS:
+查看器升级向后兼容。 在此版本中，查看器更改了命名空间支持。 因此，所有现成的查看器预设都进行了更新，以反映此更改。 但是，如果您创建了自己的自定义查看器预设，则查看器可能会显示问题，并需要根据以下已知问题更新CSS:
 
 * 视频查看器 — 播放/暂停按钮不显示“重播”状态。
 * 视频查看器 — 不显示导航标记。
 * 基本缩放、缩放和旋转查看器 — IconEffect不显示或显示SDK默认图片。
 * 弹出和缩放查看器 — 对于较大的集，不显示色板滚动按钮。
 
-建议您在我们的暂存环境中测试查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
+建议您在Adobe的暂存环境中测试查看器。 以下网站提供了有关如何设置系统以访问Adobe的暂存服务器的说明：
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对我们的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
+在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
 ## 5.4.2的新增功能和增强功能 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * 查看器SDK用在命名空间中。
 * 查看器dispose()API。
 * 在iOS设备上添加了对Chrome浏览器的支持。
-* 添加了对Microsoft Edge浏览器的支持。
+* 添加了对Microsoft® Edge浏览器的支持。
 * 向eCatalog查看器添加了“收藏夹”功能。
-* 添加了对在容器中运行查看器的支持，该查看器在CSS中隐藏或与DOM分离。`display:none`
+* 添加了对在隐藏的容器中运行查看器的支持 `display:none` CSS或与DOM分离。
 * 增加了控制水平和垂直旋转灵敏度以及锁定旋转方向的功能。
 * 查看器对SDK请求使用统一的JavaScript文件。
 
 ## 5.4.2的错误修复 {#section-c64001afa2aa460180141bc8dcd507ec}
 
 * 间歇性收缩缩放不起作用。
-* 全屏按钮在Microsoft Edge浏览器上不起作用。
+* 全屏按钮在Microsoft® Edge浏览器上不起作用。
 * 离开全屏后，外部容器上的模式属性不会重置为标准。
 * 影响工具栏上按钮放置的父DIV中的文本对齐属性。
 * 弹出查看器：当用户将鼠标滚动到主图像上时，显示左上角的图块。
@@ -51,12 +51,12 @@ ht-degree: 0%
 * 当旋转集只包含两行时，无法使用上/下手势切换行。
 * 本机控件不起作用。
 * Chrome阻止flashproxy视频播放。
-* 缩放查看器和混合媒体查看器：在模拟的全屏模式下，色板具有透明背景
-* 查看器：应忽略`init()`的第二个和后续调用。
+* 缩放查看器和混合媒体查看器：在模拟的全屏模式下，色板具有透明背景。
+* 查看器：第二次和后续调用 `init()` 应该忽略。
 
 ## 5.4.2的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* iscommand中的“图像服务”修饰符不会按设计添加到`req=set`请求中。 仅影响图像显示的修饰符可以正常工作。 影响大小的修改量必须用于复杂资产。 例如：
+* iscommand的“图像提供”修饰符不会添加到 `req=set` 按设计请求。 仅影响图像显示的修饰符可以正常工作。 影响大小的修改量必须用于复杂资产。 例如：
 
    ```
    https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
@@ -65,17 +65,17 @@ ht-degree: 0%
 * 弹出 — 鼠标关闭后，Internet Explorer 9有时仍保留在屏幕上。
 * ZoomViewer — 无法通过鼠标单击来缩放图像（Windows 8、触摸屏、Chrome）。
 * 浏览器缩放会导致调整大小错误。
-* iPad 2 — 大型eCatalog资产在iOS上崩溃了Safari。
+* iPad 2 — 大型eCatalog资产在iOS上崩溃Safari。
 
 **所有查看器**
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
-* 不支持使用`display:none` CSS或通过从父节点动态分离查看器来在DOM中添加或删除查看器。
+* 使用 `display:none` 不支持CSS或通过从父节点动态分离CSS。
 
 **所有查看器**
 
-* 将查看器嵌入表中可能会导致在非本机全屏模式下，查看器的大小或位置不正确。 请改用`DIV`s。
+* 将查看器嵌入表中可能会导致在非本机全屏模式下，查看器的大小或位置不正确。 使用 `DIV`而是。
 * 代码中具有显式实例名称的参数还要求覆盖URL中的实例名称。 例如，`zoomView.iconeffect=0`。
 * 不支持图像提供命令裁剪。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
@@ -85,8 +85,8 @@ ht-degree: 0%
 
 * 导航到其他HTML页面，然后返回有时会导致查看器重置回第一个页面。
 * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
-* `Internal` 仅链接到多页面跨页中最左侧的页面。此问题会在纵向模式下影响移动设备。
-* `InitalFrame` 仅链接到多页面跨页中最左侧的页面。此问题会在纵向模式下影响移动设备。
+* `Internal` 仅链接到多页面跨页中最左侧的页面。 此问题会在纵向模式下影响移动设备。
+* `InitalFrame` 仅链接到多页面跨页中最左侧的页面。 此问题会在纵向模式下影响移动设备。
 * 由于浏览器限制，“打印”功能在Internet Explorer 9中不可用。
 
 **混合媒体查看器**
@@ -95,14 +95,14 @@ ht-degree: 0%
 
 **社交查看器**
 
-* 要在传出电子邮件中正确呈现缩略图，`serverurl`修饰符必须使用绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符必须使用绝对URL。
 
 **视频查看器**
 
-* 海报图像可能遇到“最大大小”错误。 用户可能需要提高图像服务发布的限制设置。
+* 海报图像可能遇到“最大大小”错误。 用户必须提高“图像提供发布”的限制设置。
 * 如果视频字幕托管的HTML页面来自外部服务器(而非Scene7服务器)，则需要公司规则集。 请联系Adobe技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
-* 在iPad或Android设备上，可能会显示黑帧而不是海报图像。
-* 在iPad或Android设备上加载查看器期间，黑帧可能会在屏幕上闪烁。
+* 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
+* 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
 * 当在iPad设备上将背景设置为白色或透明时，VideoPlayer组件的侧面会显示黑色边框。
-* 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
+* 使用iOS 7,iPad上视频的最后一帧可能会失真。
