--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器5.2.3发行说明
 description: Scene7查看器5.2.3发行说明
 solution: Experience Manager
-title: Scene7查看器5.2.3发行说明
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '861'
+source-wordcount: '856'
 ht-degree: 0%
 
 ---
@@ -16,18 +16,18 @@ ht-degree: 0%
 
 ## Adobe Scene7查看器 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在我们的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
+查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe的暂存服务器的说明：
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对我们的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
+在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
-**重要信息：** 现在，默认情况下，最新版本的Firefox会阻止AdobeFlash插件在网站上运行。如果您已在桌面系统上部署使用AdobeFlash插件的Scene7视频播放器，则可以使用以下三个选项：
+**重要信息：** 默认情况下，最新版本的Firefox会阻止AdobeFlash插件在网站上运行。 如果您已在桌面系统上部署使用AdobeFlash插件的Scene7视频播放器，则可以使用以下三个选项：
 
-* 用户在Firefox中查看的网页顶部将看到提示。 在提示中，用户可以选择继续阻止插件，或允许插件运行，在这种情况下，视频会照常播放。
-* 将视频播放器设置为`playback=native`模式。 这样做会逐步播放MP4视频。
+* 用户在Firefox中查看的网页顶部会看到提示。 在提示中，用户可以选择继续阻止插件，或允许插件运行，在这种情况下，视频会照常播放。
+* 将视频播放器设置为 `playback=native` 模式。 这样做会逐步播放MP4视频。
 
-   请参阅[VideoPlayer.playback](../../c-html5-s7-aem-asset-viewers/c-html5-video-reference/c-html5-video-cmdref/r-html5-video-viewer-conf-attrib-videoplayer-playback.md#reference-13ec45db4cd4443b842f310153623221)。
+   请参阅 [VideoPlayer.playback](../../c-html5-s7-aem-asset-viewers/c-html5-video-reference/c-html5-video-cmdref/r-html5-video-viewer-conf-attrib-videoplayer-playback.md#reference-13ec45db4cd4443b842f310153623221).
 
 * 创建视频的OGG版本，该版本可用作回退。
 
@@ -53,43 +53,43 @@ Adobe正在调查在Firefox的未来版本中解决此问题的选项。
 
 * Galaxy S4 — 纵向模式：启用全屏模式时，CSS大小标记不正确
 * Internet Explorer 9和Internet Explorer 10 — 如果为CSS中的IMG定义了width属性，则缩放操作会不正确。
-* [] 在Internet Explorer 9上将Javascript模板用于外部链接后，eCatalogImage映射会卡住。
+* [eCatalog] 在Internet Explorer 9上将JavaScript模板用于外部链接后，图像映射卡住。
 
 ## 5.2.2的已知问题和限制 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-* iscommand中的“图像服务”修饰符不会按设计添加到`req=set`请求中。 仅影响图像显示的修饰符可以正常工作。 影响大小的修改量必须用于复杂资产。 例如：
+* iscommand的“图像提供”修饰符不会添加到 `req=set` 按设计请求。 仅影响图像显示的修饰符可以正常工作。 影响大小的修改量必须用于复杂资产。 例如：
 
    ```
    https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
    ```
 
-* iPad — 无法在Chrome浏览器上显示手动设置
+* iPad — 无法在Chrome浏览器上显示手动集。
 * 弹出 — 鼠标关闭后，Internet Explorer 9有时仍保持在屏幕上。
 * ZoomViewer — 无法通过鼠标单击来缩放图像（Windows 8、触摸屏、Chrome）。
 * 浏览器缩放会导致调整大小错误。
-* iPad 2 — 大型eCatalog资产会在IOS上崩溃Safari
+* iPad 2 — 大型eCatalog资产在IOS上崩溃Safari。
 
 **所有Scene7查看器**
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
-* 不支持使用`display:none` CSS或通过从父节点动态分离查看器来在DOM中添加或删除查看器。
+* 使用 `display:none` 不支持CSS或通过从父节点动态分离CSS。
 
 **所有查看器**
 
-* 将查看器嵌入表中可能会导致在非本机全屏模式下，查看器的大小或位置不正确。 请改用`DIV`s。
+* 将查看器嵌入表中可能会导致在非本机全屏模式下，查看器的大小或位置不正确。 使用 `DIV`而是。
 * 代码中具有显式实例名称的参数还要求覆盖URL中的实例名称。 例如，`zoomView.iconeffect=0`。
 * 不支持图像提供命令裁剪。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * Iscommands修饰符不支持影响图像大小的图像服务修饰符。
-* 不支持`DIV`容器上的CSS样式`display:none`。 这包括Jquery `hide()`方法。
+* CSS样式 `display:none` on `DIV` 不支持容器。 包括Jquery `hide()` 方法。
 
 **eCatalog查看器**
 
 * 导航到其他HTML页面，然后返回有时会导致查看器重置回第一个页面。
 * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
-* `Internal` 仅链接到多页面跨页中最左侧的页面。此问题会在纵向模式下影响移动设备。
-* `InitalFrame` 仅链接到多页面跨页中最左侧的页面。此问题会在纵向模式下影响移动设备。
+* `Internal` 仅链接到多页面跨页中最左侧的页面。 此问题会在纵向模式下影响移动设备。
+* `InitalFrame` 仅链接到多页面跨页中最左侧的页面。 此问题会在纵向模式下影响移动设备。
 * 由于浏览器限制，“打印”功能在Internet Explorer 9中不可用。
 
 **混合媒体查看器**
@@ -98,14 +98,14 @@ Adobe正在调查在Firefox的未来版本中解决此问题的选项。
 
 **社交查看器**
 
-* 要在传出电子邮件中正确呈现缩略图，`serverurl`修饰符必须使用绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符必须使用绝对URL。
 
 **视频查看器**
 
-* 海报图像可能会遇到“最大大小”错误。 用户可能需要提高图像服务发布的限制设置。
+* 海报图像可能会遇到“最大大小”错误。 用户必须提高“图像提供发布”的限制设置。
 * 如果视频字幕托管的HTML页面来自外部服务器(而非Dynamic Media服务器)，则需要公司规则集。 请联系Adobe技术支持以获取帮助。
-* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比
-* 在iPad或Android设备上，可能会显示黑帧而不是海报图像。
-* 在iPad或Android设备上加载查看器期间，黑帧可能会在屏幕上闪烁。
+* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
+* 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
+* 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
 * 当在iPad设备上将背景设置为白色或透明时，VideoPlayer组件的侧面会显示黑色边框。
-* 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
+* 使用iOS 7,iPad上的最后一帧视频可能会失真。
