--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器4.9.2发行说明
 description: Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 solution: Experience Manager
-title: Scene7查看器4.9.2发行说明
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: fb79049d-b135-41c4-ae63-b7b74697b956
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1106'
+source-wordcount: '942'
 ht-degree: 0%
 
 ---
@@ -18,7 +18,7 @@ Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 
 ## Scene7查看器4.9.2中的增强功能 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在我们的暂存环境中测试新查看器。 请联系技术支持部门以获取有关如何访问暂存服务器以便测试查看器的说明。 完成此操作后，您可以检查您的网站以测试升级。
+查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 请联系技术支持部门以获取有关如何访问暂存服务器以便测试查看器的说明。 激活完成后，您可以检查您的网站以测试升级。
 
 * 将查看器的最低要求提高到iOS6。
 * 向查看器添加了对自定义事件跟踪的支持。
@@ -46,8 +46,8 @@ Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 * 在嵌入式查看器中，旋转和缩放查看器工具提示被边缘剪贴。
 * 社交共享工具提示位置因社交按钮而被替换。
 * 社交共享工具提示格式与查看器工具提示不匹配。
-* 在使用Safari 5的Mac OS上，工具提示未以全屏模式显示。
-* 旋转iPad并在屏幕模式之间切换时，进度栏的视频查看器大小不正确。
+* 在使用Safari 5的macOS上，工具提示未以全屏模式显示。
+* 旋转iPad和在屏幕模式之间切换时，进度栏的视频查看器大小不正确。
 * 视频查看器默认生成控制台日志。
 
 ## Scene7查看器4.9.2中的已知问题 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
@@ -61,29 +61,29 @@ Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 * 代码中具有显式实例名称的参数必须被覆盖；URL中的实例名称也必须被覆盖。 例如，`zoomView.iconeffect=0`。
 * 不支持图像提供命令裁剪。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
-* 要自定义工具提示格式，请将`!IMPORTANT`添加到CSS声明中。
+* 要自定义工具提示格式，请添加 `!IMPORTANT` 到CSS声明。
 
 **eCatalog查看器**
 
 * 不支持图像映射中的JavaScript模板。
 * 导航到另一个HTML页面，然后返回有时会导致查看器重置回第一个页面。
-* 将`ImageMapEffect`滚动修饰符设置为`1`以调用infopanel。
+* 已设置 `ImageMapEffect` 将修饰符滚动到 `1` 调用infopanels。
 
-* `Frametransition` 设置 `none` 为 `fade` 或不受支持。
+* `Frametransition` 设置为 `none` 或 `fade` 不支持。
 
 * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
 
 **混合媒体查看器**
 
-* 目前不支持音轨播放。
+* 当前不支持音轨播放。
 
 **社交查看器**
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符应具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符应具有绝对URL。
 
 **视频查看器**
 
-* 海报图像可能会遇到“最大大小”错误。 用户可能需要提高图像服务发布的限制设置。
+* 海报图像可能会遇到“最大大小”错误。 用户必须提高“图像提供发布”的限制设置。
 * 如果视频字幕托管的HTML页面来自外部服务器(而非Scene7服务器)，则需要公司规则集。 请联系Adobe技术支持以获取帮助。
 
 **FlashAS3 — 所有查看器**
@@ -92,22 +92,19 @@ Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 * “服务器支持”无法加载嵌入视频的SWF动画。
 * 如果为Flash Player6编译了“服务器支持”，则无法加载查看器外观。 解决方法是编译Flash Player7。
 * Macintosh操作系统和Flash Player版本10,0,32,18:解决方法取决于JavaScript桥，而不是LocalConnection，以便在Flex和Flash之间进行通信。 因此，必须将Flex应用程序嵌入到HTML包装器中。
-* 目前，Flash查看器仅支持Flash7的SWF。
-* 由于Java v.1.5.0_06存在问题，该版本的Java不支持服务器组件。 [https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990](https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990)。
+* 目前，Flash查看器支持SWF仅在Flash7中遵循。
+* 由于Java™ v.1.5.0_06存在问题，该版本的Java™不支持服务器组件。 [https://bugs.java.com/?bug_id=6274990](https://bugs.java.com/?bug_id=6274990).
 * 对于外观自定义URL参数，外观URL中的参数必须进行URL编码。
-* 当ASCII字符在名称中具有扩展字符的图像集发送到查看器时，其URL必须编码两次，否则FVCTX请求会失败，因为Flash播放器在将名称传递到查看器代码之前会解码该名称。
-* 如果嵌入HTML页面在查看器后具有重要内容，则查看器可能会在页面完全加载之前调用JavaScript函数。 这可能会中止页面加载。 建议的解决方法是使用onLoad事件处理程序将初始化查看器延迟到页面加载完成后。
-* 对`S7Config.setFlashParam()`的更改允许随此`syntax S7Config.setFlashParam(<viewer ID>, <parameter name>, <parameter value> [, <parameter name>, <parameter value>])`传递多个参数/值，但在这种情况下，要传递的第一个参数必须是“image”参数，后跟“currentFrame”参数（如果需要），然后是任何其他参数。
+* 如果嵌入HTML页面在查看器后具有重要内容，则查看器可能会在页面完全加载之前调用JavaScript函数。 此操作可能会中止页面加载。 建议的解决方法是使用onLoad事件处理程序将初始化查看器延迟到页面加载完成后。
+* 使用 `skipFrames=frameList` 参数来忽略图像，如果JavaScript更改图像函数直接调用忽略的帧，则查看器会返回错误 `InitialFrame`，或者如果RenderSet具有两个或多个与图像关联的色板，则在选择引用省略帧的色板组合时。
 
-* 在使用`skipFrames=frameList`参数忽略图像时，如果JavaScript更改图像函数`InitialFrame`直接调用忽略的帧，或者如果RenderSet具有两个或多个与图像关联的色板，则查看器会返回错误 — 当选择引用忽略的帧的色板组合时。
+* 缩放目标或 `image=` 或 `modifier=` 参数。
 
-* 在`image=`或`modifier=`参数中，不支持将裁剪与缩放目标或色板结合使用。
+* 的 `rgn` 图像修饰符的flash查看器不支持参数。
+* 新的IE安全修补程序要求用户在IE中激活Flash和其他ActiveX®应用程序。 有关解决方法的信息，请参阅Microsoft®网站。
+* 安全问题会阻止查看器从同一域上的其他服务器读取，除非两个URL都是完全限定的域名，或者“跨域策略”设置为允许从该服务器访问。
 
-* 图像修饰符的Flash查看器不支持`rgn`参数。
-* 新的IE安全修补程序要求用户在IE中激活Flash和其他ActiveX应用程序。 有关解决方法的信息，请参阅Microsoft网站。
-* 安全问题会阻止查看器从同一域上的其他服务器读取，除非两个URL都是完全限定的域名，或者“跨域策略”被专门设置为允许从该服务器访问。
-* 使用Flash7的新安全功能，如果查看者尝试从查看者所在的同一域上的其他服务器读取内容（即，查看者将被`infoServerUrl`、`searchEngineUrl`或`serverUrl parameters`中的路径重定向），则安全警报会通知用户此事实并询问您是否要允许此操作，除非将“跨域策略”设置为允许从该服务器访问。
 
-   有关如何设置“跨域策略”的更多信息，请参阅以下文章：[https://kb2.adobe.com/cps/142/tn_14213.html](https://kb2.adobe.com/cps/142/tn_14213.html)。
+   有关如何设置“跨域策略”的更多信息，请参阅以下文章： [https://kb2.adobe.com/cps/142/tn_14213.html](https://kb2.adobe.com/cps/142/tn_14213.html).
 
-* 在HTTPS页面中嵌入查看器时生成异常错误。 问题是由于与服务器日志记录通信所致。 有关更多信息：[https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
+* 在HTTPS页面中嵌入查看器时生成异常错误。 问题是由于与服务器日志记录通信所致。 有关详细信息 [https://www.adobe.com/products/flashplayer/end-of-life.html](https://www.adobe.com/products/flashplayer/end-of-life.html).
