--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器5.1.1发行说明
 description: Scene7查看器5.1.1发行说明
 solution: Experience Manager
-title: Scene7查看器5.1.1发行说明
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 2f9b1d0a-2c89-41ed-af00-d8f3d636560c
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '740'
+source-wordcount: '729'
 ht-degree: 0%
 
 ---
@@ -16,43 +16,43 @@ ht-degree: 0%
 
 ## Adobe Scene7查看器 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在我们的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
+查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe的暂存服务器的说明：
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对我们的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
+在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
 ## 新增功能和增强功能 {#section-405e47e202e54943bd843d82415c91cb}
 
-* 更新了对Internet Explorer 11的支持
-* 更改了查看器以使用“跟踪请求”而不是“页面请求”进行Adobe Analytics跟踪
-* 增加了对使用图像命令和/或基于图像宽度的图像预设的响应式图像的支持
-* 添加了对将本地化文本字符串传递到查看器的JSON参数的支持
-* 在查看器色板中增加了对本机页面滚动的支持
-* 改进了对查看器的复杂资产和图像模板的支持
-* 为eCatalog查看器添加了对目录的支持
-* 为eCatalog添加了对图像映射叠加与图标的支持
-* 为eCatalog查看器添加了对翻页动画的支持
-* 在eCatalog中增加了对本机页面滚动的支持
-* 为弹出查看器增加了对使用高亮模式修饰符显示窄图像的支持
-* 增加了对使用zoomfactor修饰符控制弹出查看器图像缩放的支持
-* 添加了对弹出查看器生成的跟踪事件的支持
-* 为混合媒体查看器添加了对视频（仅限第一个视频）的字幕支持
-* 将视频和混合媒体查看器的初始比特率默认值增加到1400
-* 为视频查看器添加了对循环视频播放的支持
-* 增加了对将章节导航到视频查看器的支持
+* 更新了对Internet Explorer 11的支持。
+* 更改了查看器以使用“跟踪请求”而不是“页面请求”进行Adobe Analytics跟踪。
+* 增加了对使用基于图像宽度的图像命令和/或图像预设的响应式图像的支持。
+* 添加了对将本地化文本字符串传递到查看器的JSON参数的支持。
+* 增加了对查看器色板中本机页面滚动的支持。
+* 改进了对查看器的复杂资产和图像模板的支持。
+* 为eCatalog查看器添加了对目录的支持。
+* 为eCatalog添加了对图像映射叠加图与图标的支持。
+* 为eCatalog查看器添加了对翻页动画的支持。
+* 在eCatalog中增加了对本机页面滚动的支持。
+* 增加了对使用 `highlightmode` 修饰符。
+* 增加了对使用 `zoomfactor` 修饰符。
+* 添加了对弹出查看器生成的跟踪事件的支持。
+* 为混合媒体查看器添加了对视频（仅限第一个视频）的字幕支持。
+* 将视频和混合媒体查看器的初始比特率默认值增加到1400。
+* 为视频查看器添加了对循环视频播放的支持。
+* 添加了对将章节导航到视频查看器的支持。
 
 ## 错误修复 {#section-83698d163c304b6fb99a98d857cd3c27}
 
-* eCatalog Viewer在iPhone上不显示PageIndicator
-* 如果将带有逗号的图像服务修饰符附加到资产ID中，则无法显示图像
-* 图像集：附加到assetID的图像服务修饰符将被忽略
-* Internet Explorer 9:s7sdk.event:PageMouseEvent:单击和双击事件会触发浏览器崩溃页面
-* Internet Explorer 9和Internet Explorer 10:使用JavaScript模板激活图像映射后，eCatalog查看器中断
-* 混合媒体查看器：交换资产类型时，缩放按钮状态不会重置
-* 混合媒体查看器：如果第一个资产是2旋转集，则查看器在响应模式下折叠
-* Firefox:在加载拼贴之前，弹出窗口上短暂显示损坏的图像图标
-* 捏合手势不生成缩放
+* eCatalog Viewer在iPhone上不显示PageIndicator。
+* 如果将带有逗号的图像服务修饰符附加到资产ID中，则无法显示图像。
+* 图像集：附加到assetID的图像服务修饰符将被忽略。
+* Internet Explorer 9:s7sdk.event:PageMouseEvent:单击并双击事件会触发浏览器页面崩溃。
+* Internet Explorer 9和Internet Explorer 10:使用JavaScript模板激活图像映射后，eCatalog查看器中断。
+* 混合媒体查看器：交换资产类型时，缩放按钮状态不会重置。
+* 混合媒体查看器：如果第一个资产是2旋转集，则查看器在响应模式下折叠。
+* Firefox:在加载图块之前，弹出窗口上短暂显示损坏的图像图标。
+* 捏合手势不会生成缩放。
 * 电子目录：图像映射：相对链接发生JavaScript错误
 
 ## 已知问题和限制 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
@@ -69,7 +69,7 @@ ht-degree: 0%
 * 不支持图像提供命令裁剪。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * Iscommands修饰符不支持影响图像大小的图像服务修饰符。
-* CSS样式“显示：当前不支持DIV容器上的“无”。 这包括Jquery hide()方法。
+* CSS样式“显示：当前不支持DIV容器上的“无”。 包括Jquery hide()方法。
 
 **eCatalog查看器**
 
@@ -84,14 +84,14 @@ ht-degree: 0%
 
 **社交查看器**
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符应具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符应具有绝对URL。
 
 **视频查看器**
 
-* 海报图像可能会遇到“最大大小”错误。 用户可能需要提高图像服务发布的限制设置。
+* 海报图像可能会遇到“最大大小”错误。 提高图像提供发布的限制设置。
 * 如果视频字幕托管的HTML页面来自外部服务器(而非Scene7服务器)，则需要公司规则集。 请联系Adobe技术支持以获取帮助。
-* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比
-* 在iPad或Android设备上，可能会显示黑帧而不是海报图像。
-* 在iPad或Android设备上加载查看器期间，黑帧可能会在屏幕上闪烁。
+* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
+* 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
+* 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
 * 当在iPad设备上将背景设置为白色/透明时，VideoPlayer组件的侧面会显示黑色边框。
-* 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
+* 使用iOS 7,iPad上的最后一帧视频可能会失真。
