--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器5.5.2发行说明
 description: Scene7查看器5.5.2发行说明
 solution: Experience Manager
-title: Scene7查看器5.5.2发行说明
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: f3efc1d4-1276-423b-bc22-557842cebc90
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '608'
+source-wordcount: '602'
 ht-degree: 0%
 
 ---
@@ -27,7 +27,7 @@ ht-degree: 0%
 * 已将AppMeasurement JavaScript库更新到版本1.6.1。
 * 现在，搜索功能已添加到eCatalog查看器中。
 * 添加了HLS流视频播放作为大多数桌面系统的默认视频交付方法。 基于Flash的HDS视频流仍可用作替代播放选项。
-* 添加了对在Chrome浏览器下运行的鼠标和触摸输入的支持。 但是，Microsoft Surface设备属于此类别，Microsoft Edge不适用于带有5.5查看器的触控输入。
+* 添加了对在Chrome浏览器下运行的鼠标和触摸输入的支持。 Microsoft Surface设备属于此类别，但是，Microsoft Edge无法处理带有5.5查看器的触控输入。
 
 ## 5.5.1的错误修复 {#section-c64001afa2aa460180141bc8dcd507ec}
 
@@ -36,22 +36,22 @@ ht-degree: 0%
 
 ## 5.5.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符不会按设计添加到`req=set`请求中。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
+* “IS”(IS)命令中的“图像提供”(Image Serving)修饰符不会添加到 `req=set` 按设计请求。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
 * 弹出查看器 — 鼠标关闭后，Internet Explorer 9有时仍保留在屏幕上。
 * 缩放浏览器窗口会导致调整大小不正确。
-* iPad 2 — 大型eCatalog资产在iOS上崩溃Safari。
+* iPad 2 — 一个大型eCatalog资产在iOS上崩溃了Safari。
 
 **所有查看器**
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
-* 不支持使用`display:none` CSS或通过从父节点动态分离查看器来在DOM中添加或删除查看器。
+* 使用 `display:none` 不支持CSS或通过从父节点动态分离CSS。
 * 在表格中嵌入查看器可能会导致查看器在非本机全屏模式下的大小或位置不正确。 Adobe建议改用DIV。
-* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖（例如，`zoomView.iconfeffect=0`）。
-* 不支持“图像提供”命令`crop`。
+* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖(例如， `zoomView.iconfeffect=0`)。
+* 图像提供命令 `crop` 不支持。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * IS命令修饰符不支持影响图像大小的图像服务修饰符。
 
@@ -60,7 +60,7 @@ ht-degree: 0%
 * 导航到其他HTML页面，然后返回有时会导致查看器重置回第一个页面。
 * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
 * 内部链接仅指向多页跨页中最左侧的页面。 在纵向模式下影响移动设备。
-* `InitalFrame` 仅链接到多页面跨页中最左侧的页面。在纵向模式下影响移动设备。
+* `InitalFrame` 仅链接到多页面跨页中最左侧的页面。 在纵向模式下影响移动设备。
 * 由于浏览器限制，Internet Explorer 9中不提供“打印”功能。
 
 **混合媒体查看器**
@@ -69,15 +69,15 @@ ht-degree: 0%
 
 **社交查看器**
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符应具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符应具有绝对URL。
 
 **视频查看器**
 
-* 海报图像可能遇到`max size`错误。 您可能需要提高图像提供发布的限制设置。
-* 如果从外部服务器(而非Scene7服务器)提供托管HTML页面，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
+* 海报图像可能会遇到 `max size` 错误。 您可能需要提高图像提供发布的限制设置。
+* 如果托管HTML页面是从外部服务器(而不是Scene7服务器)提供，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
-* 在iPad或Android设备上，可能会显示黑帧，而不是海报图像。
-* 在iPad或Android设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
+* 在iPad或Android设备上，可能会显示黑框而不是海报图像。
+* 在iPad或Android设备上，在查看器加载期间，屏幕上可能会闪烁黑帧。
 * 在iPad设备上，当背景设置为白色/透明时，VideoPlayer组件的侧边会显示黑色边框。
 * 在iPad上，使用iOS 7时，视频的最后一帧可能会失真。
 * 在Chrome、Firefox和Internet Explorer浏览器上，在HLS流模式下的视频搜寻期间，可能会偶尔出现宏阻塞。
