--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -1,11 +1,11 @@
 ---
 title: Scene7 Publishing System 6.10发行说明（2015年5月）
-description: “最新发行说明描述了Adobe Scene7 Publishing System 6.10(Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分)的新增功能、增强功能和修复。”
+description: “最新发行说明描述了Adobe Scene7 Publishing System 6.10(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的新增功能、增强功能和修复。”
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: dd998249-1986-491f-b0ab-554ab414f602
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
 source-wordcount: '2339'
 ht-degree: 1%
@@ -14,11 +14,11 @@ ht-degree: 1%
 
 # Scene7 Publishing System 6.10发行说明（2015年5月）{#scene-publishing-system-release-notes-may}
 
-此最新发行说明描述了Adobe Marketing Cloud中Adobe Scene7解决方案的Adobe Experience Manager 6.10部件的新增功能、增强功能和修复。
+此最新发行说明描述了Adobe Experience Cloud中Adobe Scene7解决方案的Adobe Experience Manager 6.10部件的新增功能、增强功能和修复。
 
 ## Scene7 Publishing System 6.10发行说明（2015年5月） {#topic-be8b44aea42643c496452726d4550226}
 
-此最新发行说明描述了[!DNL Adobe Marketing Cloud]中[!DNL Adobe Experience Manager]解决方案[!DNL Adobe Scene7 Publishing System] 6.10部分的新增功能、增强功能和修复。
+最新发行说明，描述了 [!DNL Adobe Scene7 Publishing System] 6.10部分 [!DNL Adobe Experience Manager] 解决方案 [!DNL Adobe Experience Cloud].
 
 * [Scene7 Publishing System 6.10发行要点](s7rn610.md#section-d2c3b12e392446868eba029cbe13c06b)
 * [Scene7 IPS（图像制作系统）4.5.0](s7rn610.md#section-3e37ed37b6d146419f4578bd7ffeaa74)
@@ -30,131 +30,131 @@ ht-degree: 1%
 
 6.10版允许您设计和提供丰富的响应式交互式体验，从而提高所有数字渠道的转化率。
 
-* **搜索类型**  — 能够添加公司属性，以允许默认使用个人搜索类型包 **[!UICONTROL 含]**。
+* **搜索类型**  — 能够添加公司属性，以允许默认的个人搜索类型 **[!UICONTROL 包含]**.
 
-   在&#x200B;**[!UICONTROL 设置]** > **[!UICONTROL 个人设置]**&#x200B;组> **[!UICONTROL 浏览器]**&#x200B;标题> **[!UICONTROL 基本搜索类型]**&#x200B;下拉列表 — **[!UICONTROL 包含]**。
+   在 **[!UICONTROL 设置]** > **[!UICONTROL 个人设置]** 组> **[!UICONTROL 浏览器]** 标题> **[!UICONTROL 基本搜索类型]** 下拉列表 —  **[!UICONTROL 包含]**.
 
 <table id="table_69203DAA18F94A0F927BBA00634EBF65"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>设置 </p> </th> 
-   <th colname="col2" class="entry"> <p>说明 </p> </th> 
-  </tr> 
+   <th colname="col1" class="entry"> <p>设置 </p> </th>
+   <th colname="col2" class="entry"> <p>说明 </p> </th>
+  </tr>
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Contains </span> </p> </td> 
-   <td colname="col2"> <p>默认. 搜索指定值的完整字符串。 </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> Contains </span> </p> </td>
+   <td colname="col2"> <p>默认. 搜索指定值的完整字符串。 </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 以此开头 </span> </p> </td> 
-   <td colname="col2"> <p> 从字符串的开头进行搜索，并返回搜索结果的速度比<span class="uicontrol">包含</span>快。 </p> <p>它会将<span class="uicontrol">应用程序设置</span> &gt; <span class="uicontrol">常规设置</span>组&gt; <span class="uicontrol">其他设置中设置的默认值覆盖到管理员提供的应用程序</span>组&gt; <span class="uicontrol">新用户的默认基本搜索类型</span>下拉列表中。 </p> </td> 
-  </tr> 
- </tbody> 
+   <td colname="col1"> <p> <span class="uicontrol"> 以此开头 </span> </p> </td>
+   <td colname="col2"> <p> 从字符串的开头进行搜索，并返回搜索结果的速度比 <span class="uicontrol"> 包含 </span>. </p> <p>它会覆盖 <span class="uicontrol"> 应用程序设置 </span> &gt; <span class="uicontrol"> 常规设置 </span> 组&gt; <span class="uicontrol"> 其他设置、应用程序 </span> 组&gt; <span class="uicontrol"> 新用户的默认基本搜索类型 </span> 下拉列表。 </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-在&#x200B;**[!UICONTROL 应用程序设置]** > **[!UICONTROL 常规设置]**&#x200B;组> **[!UICONTROL 其他设置中，选择应用程序]**&#x200B;组> **[!UICONTROL 新用户的默认基本搜索类型]**&#x200B;下拉列表。
+在 **[!UICONTROL 应用程序设置]** > **[!UICONTROL 常规设置]** 组> **[!UICONTROL 其他设置、应用程序]** 组> **[!UICONTROL 新用户的默认基本搜索类型]** 下拉列表。
 
 <table id="table_A48D69C0F26D43B58C4C890FBF908F8A"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>设置 </p> </th> 
-   <th colname="col2" class="entry"> <p>说明 </p> </th> 
-  </tr> 
+   <th colname="col1" class="entry"> <p>设置 </p> </th>
+   <th colname="col2" class="entry"> <p>说明 </p> </th>
+  </tr>
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 包含  </span> </p> </td> 
-   <td colname="col2"> <p> 搜索指定值的完整字符串。 </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> 包含 </span> </p> </td>
+   <td colname="col2"> <p> 搜索指定值的完整字符串。 </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 以此开头 </span> </p> </td> 
-   <td colname="col2"> <p>从字符串的开头进行搜索，并返回搜索结果的速度比<span class="uicontrol">包含</span>快。 </p> <p>新用户可以选择在<span class="uicontrol">个人设置</span>中覆盖此默认设置。 </p> </td> 
-  </tr> 
- </tbody> 
+   <td colname="col1"> <p> <span class="uicontrol"> 以此开头 </span> </p> </td>
+   <td colname="col2"> <p>从字符串的开头进行搜索，并返回搜索结果的速度比 <span class="uicontrol"> 包含 </span>. </p> <p>新用户可以选择在 <span class="uicontrol"> 个人设置 </span>. </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-* **为即装即用的HTML5旋转集查看器**  — 在“设置” **** >  **[!UICONTROL 应用程序设置]** >  **[!UICONTROL 查看器]** >  **[!UICONTROL 查看器预设]**  `Universal_HTML5_SpinSet_dark` 或 `Universal_HTML5_SpinSet_light`中，对每个查看器各自的 [!DNL Configure Viewer] 页面添加了以下设置：
+* **为开箱即用的HTML5旋转集查看器添加了新设置**  — 在 **[!UICONTROL 设置]** > **[!UICONTROL 应用程序设置]** > **[!UICONTROL 查看器]** > **[!UICONTROL 查看器预设]** > `Universal_HTML5_SpinSet_dark` 或 `Universal_HTML5_SpinSet_light`，则会向每个查看者各自的 [!DNL Configure Viewer] 页面：
 
 <table id="table_E78C924E34894CD7BE080C0D71500784"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>新建设置 </p> </th> 
-   <th colname="col2" class="entry"> <p>说明 </p> </th> 
+   <th colname="col1" class="entry"> <p>新建设置 </p> </th>
+   <th colname="col2" class="entry"> <p>说明 </p> </th>
   </tr> 
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 自动旋转  </span> </p> </td> 
-   <td colname="col2"> <p>启用或禁用自动旋转动画。 默认值为<span class="uicontrol">关闭</span>。 当设置为<span class="uicontrol">在</span>上时，您可以指定旋转持续时间，该持续时间是一次完全旋转的秒数；默认值为<span class="codeph"> 5 </span>。 将旋转方向设置为右或左；默认值为<span class="uicontrol">右</span>。 </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> 自动旋转 </span> </p> </td> 
+   <td colname="col2"> <p>启用或禁用自动旋转动画。 默认为 <span class="uicontrol"> 关闭 </span>. 当设置为 <span class="uicontrol"> 开 </span>，则可以指定一次完全旋转的旋转持续时间（秒数）；默认为 <span class="codeph"> 5 </span>. 将旋转方向设置为右或左；默认为 <span class="uicontrol"> Right </span>. </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 旋转计数  </span> </p> </td> 
-   <td colname="col2"> <p>允许您设置<span class="uicontrol">旋转计数</span> ，该计数是自动旋转停止前的完全旋转次数；默认值为<span class="codeph"> 1 </span>。 </p> <p>将旋转计数设置为<span class="codeph"> -1 </span>会导致无限自动旋转。 </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> 旋转计数 </span> </p> </td> 
+   <td colname="col2"> <p>允许您设置 <span class="uicontrol"> 旋转计数 </span> 自动旋转停止前的完全旋转次数；默认为 <span class="codeph"> 1 </span>. </p> <p>将旋转计数设置为 <span class="codeph"> -1 </span> 导致无限自动旋转。 </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 高分辨率预载  </span> </p> </td> 
-   <td colname="col2"> <p>在</span>上将<span class="uicontrol">高分辨率预载</span>设置为<span class="uicontrol">可以高质量加载配置的帧范围。 启用此设置可能会显着增加带宽使用和页面加载时间。 </span></p> </td> 
-  </tr> 
- </tbody> 
+   <td colname="col1"> <p> <span class="uicontrol"> 高分辨率预载 </span> </p> </td> 
+   <td colname="col2"> <p>设置 <span class="uicontrol"> 高分辨率预载 </span> to <span class="uicontrol"> 开 </span> 以高质量加载配置的帧范围。 启用此设置可能会显着增加带宽使用和页面加载时间。 </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-* **为即装即用的HTML5 eCatalog查看器**  — 在“设置” **** >  **[!UICONTROL 应用程序设置]** >  **[!UICONTROL 查看器预设]** >  `Universal_HTML5_eCatalog` 或 `Universal_HTML5_eCatalog_Adv`中，对每个查看器各自的 [!DNL Configure Viewer] 页面添加了以下设置：
+* **向即装即用HTML5 eCatalog查看器中添加了新设置**  — 在 **[!UICONTROL 设置]** > **[!UICONTROL 应用程序设置]** > **[!UICONTROL 查看器预设]** > `Universal_HTML5_eCatalog` 或 `Universal_HTML5_eCatalog_Adv`，则会向每个查看者各自的 [!DNL Configure Viewer] 页面：
 
 <table id="table_65BA9F98D1D041109A44B1C130EF4EFA"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>新建设置 </p> </th> 
-   <th colname="col2" class="entry"> <p>说明 </p> </th> 
+   <th colname="col1" class="entry"> <p>新建设置 </p> </th>
+   <th colname="col2" class="entry"> <p>说明 </p> </th>
   </tr> 
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 打印 </span> </p> </td> 
-   <td colname="col2"> <p>选项卡包含<span class="uicontrol">打印质量</span>设置，用于指定发送到打印机的图像的最大大小。 默认值为<span class="codeph"> 1000 </span>。 </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> 打印 </span> </p> </td>
+   <td colname="col2"> <p>选项卡包括 <span class="uicontrol"> 打印质量 </span> 用于指定发送到打印机的图像的最大大小的设置。 默认为 <span class="codeph"> 1000 </span>. </p> </td>
+  </tr>
   <tr> 
    <td colname="col1"> <p> <span class="uicontrol"> 收藏夹 </span> </p> </td> 
-   <td colname="col2"> <p>选项卡包含<span class="uicontrol">过期时间</span>和<span class="uicontrol">收藏夹缩略图大小</span>()的设置。 </p> <p> 
+   <td colname="col2"> <p>选项卡包含 <span class="uicontrol"> 过期时间 </span> 和 <span class="uicontrol"> 收藏夹缩略图大小 </span> ()。 </p> <p> 
      <ul id="ul_42DA3E946E5445B98B5D8CE668F0139F"> 
-      <li id="li_B4EC8934863347AF8494C64ADBEEC4D6"> <span class="uicontrol"> 过期 </span> 时间 — 用于指定收藏集在用户系统过期前保留在其系统中的天数。每次用户访问eCatalog并添加或删除收藏夹时，过期时间都会重置。 默认为<span class="codeph"> 30 </span>天。 </li> 
-      <li id="li_D57F9D7ABEB84F819191AD863A5DADCF"> <span class="uicontrol"> 收藏夹缩 </span> 略图大小 — 用于指定用 <span class="codeph"> 于“收藏夹”的 </span>缩略图大小(0-1.0)。 <p>该设置以相对于总帧大小的相对值表示。 例如，值<span class="codeph"> 1.0 </span>表示整个帧图像用于缩略图。 值<span class="codeph"> 0.1 </span>（默认）表示缩略图使用帧大小的10%。 </p> </li> 
-     </ul> </p> </td> 
-  </tr> 
- </tbody> 
+      <li id="li_B4EC8934863347AF8494C64ADBEEC4D6"> <span class="uicontrol"> 过期时间 </span>  — 用于指定收藏集在用户系统中过期前保留的天数。 每次用户访问eCatalog并添加或删除收藏夹时，过期时间都会重置。 默认为 <span class="codeph"> 30 </span> 天。 </li>
+      <li id="li_D57F9D7ABEB84F819191AD863A5DADCF"> <span class="uicontrol"> 收藏夹缩略图大小 </span>  — 用于指定大小( <span class="codeph"> 0-1.0 </span>)。 <p>该设置以相对于总帧大小的相对值表示。 例如，值为 <span class="codeph"> 1.0 </span> 表示整个帧图像用于缩略图。 值 <span class="codeph"> 0.1 </span> （默认）表示缩览图使用帧大小的10%。 </p> </li>
+     </ul> </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-* **为即装即用的HTML5混合媒体集查看器**  — 在“设置” **** >  **[!UICONTROL 应用程序设置]** >  **[!UICONTROL 查看器预设]** >  `Universal_HTML5_MixedMedia_dark` 或 `Universal_HTML5_MixedMedia_light`中，对每个查看器各自的 [!DNL Configure Viewer] 页面添加了以下设置：
+* **为即装即用HTML5混合媒体集查看器添加了新设置**  — 在 **[!UICONTROL 设置]** > **[!UICONTROL 应用程序设置]** > **[!UICONTROL 查看器预设]** > `Universal_HTML5_MixedMedia_dark` 或 `Universal_HTML5_MixedMedia_light`，则会向每个查看者各自的 [!DNL Configure Viewer] 页面：
 
 <table id="table_023203E3CC484F59A350C3C333EF817F"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>新建设置 </p> </th> 
-   <th colname="col2" class="entry"> <p>说明 </p> </th> 
-  </tr> 
+   <th colname="col1" class="entry"> <p>新建设置 </p> </th>
+   <th colname="col2" class="entry"> <p>说明 </p> </th>
+  </tr>
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 缩放模 </span> 式下拉列表 </p> </td> 
-   <td colname="col2"> <p>允许您配置要使用的缩放动画类型。 在左边栏中，单击<span class="uicontrol">查看器功能</span> ，以从下拉列表中访问以下<span class="uicontrol">缩放模式</span>选项： </p> <p> 
+   <td colname="col1"> <p> <span class="uicontrol"> 缩放模式 </span> 下拉列表 </p> </td> 
+   <td colname="col2"> <p>允许您配置要使用的缩放动画类型。 在左边栏中，单击 <span class="uicontrol"> 查看器功能 </span> 访问以下内容 <span class="uicontrol"> 缩放模式 </span> 下拉列表中的选项： </p> <p> 
      <ul id="ul_8026EF465A044666A9DBCBFA43F74565"> 
-      <li id="li_816C7D214DE44C488787AF92CEF0BDF9"> <span class="uicontrol"> 连续( </span> 默认) — 要求用户单击或点按图像以进行缩放。 </li> 
-      <li id="li_C78D3C94C36549B182E1118308BD7326"> <span class="uicontrol"> 内联 —  </span> 在鼠标悬停时运行缩放。 </li> 
-      <li id="li_1483A67210E14064B12D785BAE045C6F"> <span class="uicontrol"> 自动 —  </span> 在台式机上 <span class="uicontrol"> 自动 </span> 连续应用，在触 <span class="uicontrol"> 控设 </span> 备上自动应用内联。 </li> 
-     </ul> </p> </td> 
-  </tr> 
+      <li id="li_816C7D214DE44C488787AF92CEF0BDF9"> <span class="uicontrol"> 连续 </span> （默认） — 要求用户单击或点按图像以缩放。 </li> 
+      <li id="li_C78D3C94C36549B182E1118308BD7326"> <span class="uicontrol"> 内嵌 </span>  — 鼠标悬停时运行缩放。 </li> 
+      <li id="li_1483A67210E14064B12D785BAE045C6F"> <span class="uicontrol"> 自动 </span>  — 自动应用 <span class="uicontrol"> 连续 </span> 在台式机和 <span class="uicontrol"> 内嵌 </span> 在触控设备上。 </li> 
+     </ul> </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> 弹出/内联缩放选 </span> 项卡 </p> </td> 
-   <td colname="col2"> <p> 在左边栏中，单击<span class="uicontrol">弹出/内联缩放</span>以访问以下可用选项： </p> <p> 
+   <td colname="col1"> <p> <span class="uicontrol"> 弹出/内联缩放 </span> 选项卡 </p> </td> 
+   <td colname="col2"> <p> 在左边栏中，单击 <span class="uicontrol"> 弹出/内联缩放 </span> 访问以下可用选项： </p> <p> 
      <ul id="ul_081A473EFAAC47DD8CF5260492A53C67"> 
-      <li id="li_A672C11207524F8AB7957B6848F4FFF1"> <span class="uicontrol"> 主要缩放因 </span> 子(默认： <span class="codeph"> 3) </span>和次 <span class="uicontrol"> 缩放因 </span> 子(可选；默认： <span class="codeph"> -1) </span> — 指定弹出/内联视图相对于重置视图的图像放大率。指定整数或浮点值<span class="codeph"> 1.0 </span>或更大。 <p>您可以指定可选的次缩放因子。 当高亮显示处于活动状态时，可通过单击主视图访问辅助缩放。 再次单击将还原为主缩放因子。 值<span class="codeph"> -1 </span>将禁用次缩放因子。 </p> </li> 
-      <li id="li_C240206B2E3F4919935C05A253022ED9"> <span class="uicontrol"> 预加载缩放图 </span> 像(默认值： <span class="codeph"> Off) </span> — 设置为On( <span class="uicontrol"> 1) </span> 以启用缩放图像的预加载；设置 <span class="uicontrol"> 为 </span> Off(0)，以根据需要以递增方式加载缩放图像。 <p>如果启用此选项，则会显着提高带宽的使用率，因为放大的图像会全部加载，即使用户没有执行缩放操作也是如此。 </p> </li> 
-      <li id="li_3B9FDD1C82E94E1AB77055B76947F110"> <span class="uicontrol"> 桌面的提示文 </span> 本 — 用于指定在桌面系统的查看器中显示的可选提示的文本。 </li> 
-      <li id="li_8C709D34A371486EB8C561DE3A2A48B9"> <span class="uicontrol"> 移动设备的提示文 </span> 本 — 用于指定在移动设备的查看器中显示的可选提示的文本。 </li> 
-      <li id="li_BB51273170054C3A8241F8F3B6856DA0"> <span class="uicontrol"> 提示持续 </span> 时间(默认： <span class="codeph"> 3  </span>)、提 <span class="uicontrol"> 示计 </span> 数(默认： <span class="codeph"> 1) </span>和提示渐 <span class="uicontrol"> 隐 </span> 色(默认： <span class="codeph"> 0.3)- </span>通过这三个选项，您可以指定可选提示文本的显示行为。 <p>使用<span class="uicontrol">提示持续时间</span>指定文本在隐藏之前显示的秒数。 如果将持续时间设置为<span class="codeph"> -1 </span>，则即使用户激活缩放，提示文本也会持续显示。 </p> <p>使用<span class="uicontrol">提示计数</span>指定在查看集合中的新图像时文本显示的次数。 如果将提示计数设置为<span class="codeph"> -1 </span>，则在查看集合中的任意图像时，会连续显示文本。 </p> <p> <span class="uicontrol"> 提示渐 </span> 隐允许您指定文本出现或消失时的渐隐动画的持续时间。如果将提示渐隐设置为<span class="codeph"> 0 </span>，则不使用渐隐过渡。 </p> </li> 
-     </ul> </p> </td> 
-  </tr> 
- </tbody> 
+      <li id="li_A672C11207524F8AB7957B6848F4FFF1"> <span class="uicontrol"> 主要缩放因子 </span> (默认： <span class="codeph"> 3 </span>)和 <span class="uicontrol"> 次缩放因子 </span> （可选）默认： <span class="codeph"> -1 </span>) — 指定弹出/内联视图相对于重置视图的图像放大率。 指定整数或浮点值 <span class="codeph"> 1.0 </span> 或更大。 <p>您可以指定可选的次缩放因子。 在高亮显示活动时，可通过选择主视图来访问辅助缩放。 选择第二次将还原为主缩放因子。 值 <span class="codeph"> -1 </span> 禁用次缩放因子。 </p> </li> 
+      <li id="li_C240206B2E3F4919935C05A253022ED9"> <span class="uicontrol"> 预加载缩放图像 </span> (默认： <span class="codeph"> 关闭 </span>) — 设置为 <span class="uicontrol"> 开 </span> （一）能够预载放大后的图像；设置为 <span class="uicontrol"> 关闭 </span> (0)根据需要以增量方式加载缩放图像。 <p>如果启用此选项，则会显着提高带宽的使用率，因为放大的图像会全部加载，即使用户没有执行缩放操作也是如此。 </p> </li> 
+      <li id="li_3B9FDD1C82E94E1AB77055B76947F110"> <span class="uicontrol"> 桌面提示文本 </span>  — 用于指定在桌面系统查看器中显示的可选提示的文本。 </li> 
+      <li id="li_8C709D34A371486EB8C561DE3A2A48B9"> <span class="uicontrol"> 移动设备提示文本 </span>  — 用于指定在移动设备的查看器中显示的可选提示的文本。 </li> 
+      <li id="li_BB51273170054C3A8241F8F3B6856DA0"> <span class="uicontrol"> 提示持续时间 </span> (默认： <span class="codeph"> 3 </span>)、 <span class="uicontrol"> 提示计数 </span> (默认： <span class="codeph"> 1 </span>)和 <span class="uicontrol"> 笔尖渐隐 </span> (默认： <span class="codeph"> 0.3 </span>) — 通过这三个选项，您可以指定可选提示文本的显示行为。 <p>使用 <span class="uicontrol"> 提示持续时间 </span> 以指定文本在隐藏前显示的秒数。 如果将持续时间设置为 <span class="codeph"> -1 </span>，则即使用户激活缩放，提示文本也会持续显示。 </p> <p>使用 <span class="uicontrol"> 提示计数 </span> 以指定在查看图像集中的新图像时文本显示的次数。 如果将提示计数设置为 <span class="codeph"> -1 </span>，则在查看集合中的任意图像时，会连续显示文本。 </p> <p> <span class="uicontrol"> 笔尖渐隐 </span> 允许您指定在文本出现或消失时出现的渐隐动画的持续时间。 如果将提示淡入 <span class="codeph"> 0 </span>，则不使用渐隐过渡。 </p> </li> 
+     </ul> </p> </td>
+  </tr>
+ </tbody>
 </table>
 
 ## Scene7 IPS（图像制作系统）4.5.0 {#section-3e37ed37b6d146419f4578bd7ffeaa74}
@@ -164,33 +164,33 @@ ht-degree: 1%
 * 现在正在运行JDK 1.8。
 * 支持EXIF方向标记。
 * 对于临时FTP文件，上载目录文件跳过（使用ProFTP创建）。
-* 图像渲染现在支持即时发布。 这意味着您渲染的晕影资产可立即在您的网站上启动，而无需启动发布作业。 如果您有兴趣使用此功能，请联系技术支持，让他们为您的帐户启用即时发布功能。
+* 图像渲染现在支持即时发布。 此功能意味着您渲染的晕影资产可立即在您的网站上启动，而无需启动发布作业。 如果您有兴趣使用此功能，请联系技术支持，让他们为您的帐户启用即时发布功能。
 
 **新配置参数**
 
 <table id="table_8B704CC077304CE2AC3E616D40B64CEF"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>参数 </p> </th> 
-   <th colname="col2" class="entry"> <p>说明 </p> </th> 
+   <th colname="col1" class="entry"> <p>参数 </p> </th>
+   <th colname="col2" class="entry"> <p>说明 </p> </th>
   </tr> 
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <span class="codeph"> uploadserver.file.skip.list  </span> </td> 
-   <td colname="col2"> <p> 以逗号分隔的正则表达式列表，以匹配临时文件名。 默认值为<span class="codeph"> .in..+ </span> </p> </td> 
+   <td colname="col1"> <span class="codeph"> uploadserver.file.skip.list </span> </td> 
+   <td colname="col2"> <p> 以逗号分隔的正则表达式列表，以匹配临时文件名。 默认为 <span class="codeph"> .in..+ </span> </p> </td>
   </tr> 
   <tr> 
-   <td colname="col1"> <span class="codeph"> uploadserver.file.skip.remove.timeout  </span> </td> 
-   <td colname="col2"> <p> 在上载文件夹作业中删除临时文件之前，自上次文件修改后等待的时间（以秒为单位）。 </p> <p>值<span class="codeph"> &lt;= 0 </span>可阻止删除临时文件。 默认值为 3600。 </p> </td> 
+   <td colname="col1"> <span class="codeph"> uploadserver.file.skip.remove.timeout </span> </td> 
+   <td colname="col2"> <p> 在上载文件夹作业中删除临时文件之前，自上次文件修改后等待的时间（以秒为单位）。 </p> <p>值 <span class="codeph"> &lt;= 0 </span> 阻止删除临时文件。 默认值为 3600。 </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <span class="codeph"> autoset.dupcheck.sleep.time  </span> </p> </td> 
-   <td colname="col2"> <p>默认值为 100。 </p> </td> 
+   <td colname="col1"> <p> <span class="codeph"> autoset.dupcheck.sleep.time </span> </p> </td> 
+   <td colname="col2"> <p>默认值为 100。 </p> </td>
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <span class="codeph"> autoset.dupretry.counter  </span> </p> </td> 
-   <td colname="col2"> <p>默认值为 3。 </p> </td> 
+   <td colname="col1"> <p> <span class="codeph"> autoset.dupretry.counter </span> </p> </td> 
+   <td colname="col2"> <p>默认值为 3。 </p> </td>
   </tr> 
  </tbody> 
 </table>
@@ -202,64 +202,64 @@ ht-degree: 1%
 
 **错误修复**
 
-* 响应API `getAssets`,`<metadataArray>`文件的[!DNL .vtt]为空。
+* 的 `<metadataArray>` 为空 [!DNL .vtt] 文件 `getAssets`.
 
 * 方向缺少userdata字段。
-* `getJobLogDetails`对更新ACO文件的作业的响应未正确指定作业详细信息。
-* PSD主文件已记录为每个图像服务器多次发布。
+* 来自的响应 `getJobLogDetails` 对于更新ACO文件的作业，未正确指定作业详细信息。
+* PSD主文件已作为每个图像服务器多次发布记录。
 * 名称中包含无效字符的资产可以上传到IPS。
 * 无法生成的视频缩略图保留为“队列中的待处理”状态。
-* 在大型`deleteFolder`和服务器目录上载之间进行文件夹还原的争用条件。
+* 在大型文件夹之间恢复的争用条件 `deleteFolder` 和服务器目录上传。
 * 在上传时提前发布时，PDF文件在每个发布服务器上被记录两次。
 * 上传具有相同层名称的多个PSD文件会导致优化错误。
-* 客户PDF的PDF光栅化导致生成的图像出现意外白线。
+* 客户PDF的PDFL光栅化导致生成的图像出现意外的白线。
 * 视频缩略图文件在上传时发布多次。
 * 重复的上传文件检测会生成两个上传通知，从而引发已完成的文件记帐。
 * 视频转码的Sidecar XML文件在更新时多次记录为已发布。
 * 当您删除嵌套文件夹并将另一个文件夹（不在嵌套文件夹的父文件夹中，并且与嵌套文件夹同名）移到以前嵌套文件夹的位置时，moveFolder会失败。
 * 共享和本地配置中的群集状态配置项未通过清理清除。
 * 更改API日志解析器以筛选电子邮件地址格式。
-* 视频处理未正确映射`Iptc4xmpCore:Location`。
+* 视频处理不映射 `Iptc4xmpCore:Location` 正确。
 * 清理和上传之间存在争用条件。
-* 发布不使用`assetFile`，因此暂存发布仅适用于新资产。
+* 发布不使用 `assetFile` 因此，暂存发布仅适用于新资产。
 * 更新规则集时引发空指针。
 
 ## 查看器 {#section-833ab92c91c941d2bfdc27f233f582ad}
 
 **Dynamic Media Image Serving Viewers 5.2.2的新增功能、增强功能和错误修复**
 
-查看器升级可向后兼容 — 无需对现有Web代码进行任何更改。 但是，建议您在我们的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
+查看器升级可向后兼容 — 无需对现有Web代码进行任何更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe的暂存服务器的说明：
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 如果您使用的是现成的HTML5查看器，最佳实践是针对我们的标准暂存服务器和s7is5-preview-staging.scene7.com进行测试。
+在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 如果您使用的是现成的HTML5查看器，最佳实践是针对Adobe的标准暂存服务器和s7is5-preview-staging.scene7.com进行测试。
 
 新增功能和增强功能
 
-另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
+另请参阅 [查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
 * 在eCatalog查看器中添加了对“打印”、“下载”和“收藏”的支持。
 * 添加了使用getComponent API检索ParameterManager的功能。
-* 转换后的旋转查看器、缩放查看器、视频查看器和弹出查看器可用于图稿。
+* 转换后的旋转查看器、缩放查看器、视频查看器和弹出查看器可用于图稿的拼图。
 * 添加了对IE11本机全屏的支持。
 * 在容器中重构了模拟（非本机）全屏支持。
 * 增加了CSS小标记大小以支持更大的手机。
-* 在桌面浏览器上，删除了HTML5旋转、基本缩放、缩放、旋转和混合媒体查看器的CSS大小标记。
+* 在桌面浏览器中，为HTML5旋转、基本缩放、缩放、旋转和混合媒体查看器删除了CSS大小标记。
 * 添加了对允许在SpinView中配置预加载帧的质量的支持。
 * 已修复 — Galaxy S4纵向模式：启用全屏模式时使用的CSS大小标记不正确。
-* 已修复 — 在Internet Explorer 9上将javascript模板用于外部链接后，[eCatalog]图像映射卡住。
+* 已修复 —  [eCatalog] 在Internet Explorer 9上将JavaScript模板用于外部链接后，图像映射会卡住。
 * 已修复 — Internet Explorer 9和Internet Explorer 10:如果为CSS中的IMG定义了width属性，则缩放操作会不正确。
 
 **Scene7 HTML5查看器SDK 2.9.2的新增功能、增强功能和错误修复**
 
 常规
 
-* 修复了s7sdk.browser.device.version错误地检测到第五个Android的问题。
+* 修复了s7sdk.browser.device.version错误地检测到第五个Android™的问题。
 * 删除了在SDK组件中使用可见性：可见样式的情况。
 
 FlyoutzoomView
 
-* 已修复 — [IE9]弹出窗口有时在鼠标移开后仍保留在屏幕上。
+* 已修复 —  [IE9] 鼠标移开后，弹出窗口有时仍保留在屏幕上。
 * 已修复 — 在初始图像中添加了两次iscommand字符串。
 * 添加了其他状态事件。
 
@@ -301,17 +301,17 @@ ZoomView
 * “发布”设置未显示来自Scene7共享资产公司的颜色配置文件。
 * 从FTP屏幕上传：FTP文件夹未排序，但输出是一个已排序的文件夹列表。
 * 在Media Portal设置中，更改了“编辑组”的“资产访问权限”选项卡的描述。
-* 使用安全测试图像服务发布设置时，格式错误的`clientAddressFilter`导致目录服务器出现异常。
-* 当URL中存在多个连续空格时，Chrome浏览器中的PDF复制URL会失败。
+* 格式错误 `clientAddressFilter` 在使用“安全测试图像服务发布”设置时，导致目录服务器出现异常。
+* 当URL中存在多个连续空格时，Chrome浏览器中的PDF复制URL失败。
 * Scene7发布系统中的FTP服务器和FTP帐户信息不一致。
-* 删除了[!DNL Adobe Marketing Cloud]链接向导按钮。
+* 删除 [!DNL Adobe Experience Cloud] “链接向导”按钮。
 * MPEG视频正在进行编码，但无法播放。
 * s7report Web服务更新后，每日带宽报告已中断。
 * 原始功能板域报表中的开始日期和结束日期设置不正确。
 * 对Scene7 Publishing System中的Web-to-Print下载体验进行了细化。
-* 实施了用于创建和更新标记类型元数据字段的配置用户界面。 `fieldType`参数中的&#x200B;**[!UICONTROL 元数据字段类型]**&#x200B;仅支持`SingleFixedTag`和`BooleanTag`。
+* 实施了用于创建和更新标记类型元数据字段的配置用户界面。 支持 **[!UICONTROL 元数据字段类型]** 在 `fieldType` 参数包含 `SingleFixedTag` 和 `BooleanTag` 仅。
 
-* 在从地址发送电子邮件中，将`@scene7.com`更改为`@adobe.com`。
+* 已更改 `@scene7.com` to `@adobe.com` （在从地址发送电子邮件）。
 
 * 添加了“图像提供发布类型”选项。
 * 由于请求正文中的日期不正确，未显示视频流数据。
@@ -320,15 +320,15 @@ ZoomView
 * 即使显示了数据，“带宽”报表中也没有可用的带宽数据错误。
 * 当前日期显示在“带宽和存储”报表中，而不是选定的日期。
 * 更改了Scene7 Publishing System欢迎页面中显示的消息。
-* 将值`Userdata`字段添加回高级搜索中。
-* 在添加类型为`Boolean`的用户定义字段（**[!UICONTROL 设置]** > **元数据** > **用户定义字段**）和值`true`后进行保存时，会导致错误。
+* 添加了值 `Userdata` 字段返回高级搜索。
+* 在添加用户定义字段( **[!UICONTROL 设置]** > **元数据** > **用户定义的字段**)类型 `Boolean`，值为 `true`，然后保存它。
 
 ## 不再支持的功能 {#section-9295ea9313c84695b19bca0e0f01a690}
 
-* **Flash查看器生命周期终** *止通知自2017年1月31日起，Adobe Scene7(现称Dynamic Media Classic)正式终止对Flash查看器平台的支持。*
+* **Flash查看器生命周期终止通知** *自2017年1月31日起，Adobe Scene7(现称Dynamic Media Classic)正式终止对Flash查看器平台的支持。*
 
 * 提醒：自2014年1月31日起，Scene7正式停止对DHTML查看器平台的支持。
 * Scene7Creative Suite扩展在此版本中被弃用，因为Creative Cloud应用程序不支持Flash面板。 内容摄取工作流的进一步开发将重点关注Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7,Scene7发布系统中的上传和导出功能将保留，并可以改用。
-* 由于采用率较低，UGC视频在此版本中被弃用。 设置另一个Dynamic Media Classic帐户可用作UGC视频的替代解决方案。 请联系Adobe技术支持以设置其他帐户。
+* 由于采用率较低，UGC视频在此版本中被弃用。 设置另一个Dynamic Media Classic帐户可用作UGC视频的替换解决方案。 请联系Adobe技术支持以设置其他帐户。
 * 由于采用率较低，此版本中已弃用文本连字。 连字词典定义了如何分割单词并用连字符进行连字，以支持最佳文本流。
-* 由于采用率较低，元数据服务器和相似性搜索在2015年均被弃用。 在公布正式弃用目标日期后，受影响的客户将收到Adobe技术支持的通知。
+* 由于采用率较低，元数据服务器和相似性搜索在2015年均被弃用。 在宣布正式弃用目标日期后，Adobe技术支持会通知受影响的客户。
