--- a/help/s7-release-notes/s7rn65.md
+++ b/help/s7-release-notes/s7rn65.md
@@ -1,39 +1,39 @@
 ---
-description: “最新发行说明描述了Adobe Scene7 Publishing System 6.5(Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分)的最新功能、增强功能和修复。”
-solution: Experience Manager
 title: Scene7 Publishing System 6.5发行说明
+description: “最新发行说明描述了Adobe Scene7 Publishing System 6.5(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的最新功能、增强功能和修复。”
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 7aac3b5d-541a-49e6-98ae-c22eee8d2702
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '732'
-ht-degree: 5%
+source-wordcount: '726'
+ht-degree: 1%
 
 ---
 
 # Scene7 Publishing System 6.5发行说明{#scene-publishing-system-release-notes}
 
-此最新发行说明描述了Adobe Marketing Cloud Publishing System 6.5部件的Adobe Scene7的最新功能、增强功能和修复。
+此最新发行说明描述了Adobe Experience Cloud Publishing System 6.5部件的Adobe Scene7的最新功能、增强功能和修复。
 
 ## 新增软件功能、增强功能和修复 {#section-30a6201e50b74fc194c08bd732672ac1}
 
 **有关资产发布的重要信息**
 
-2013年第1季度和第2季度，Scene7的发布流程发生了变化。 当前的“标记为发布”和“发布”两步流程将简化为一步流程。 “标记为发布”状态将不再存在，资源将处于“已发布”或“未发布”状态。将资源标记为发布将自动发布此资源。
+2013年第1季度和第2季度，Scene7的发布流程发生了变化。 当前的“标记为发布”和“发布”两步流程现已简化为一步流程。 标记为发布状态不再存在，并且资产处于已发布或未发布状态。 标记要发布的资产会自动发布该资产。
 
 **资产管理和发布**
 
 * 自动生成集
 
    添加了选择资产并将自动集生成作为独立作业运行的功能。
-* 添加了对在将ZIP/TAR文件上传到Adobe[!DNL Scene7 Publishing System]时解包的支持。
+* 添加了对在将ZIP/TAR文件上传到Adobe时解包的支持 [!DNL Scene7 Publishing System].
 
    将ZIP和TAR文件上载到SPS时，可以选择将资产解压缩到压缩文件中包含的目录结构。
 
 * 添加了对拖放文件夹的支持。
 
-   您也可以通过选择&#x200B;**[!UICONTROL 文件]** > **[!UICONTROL 移动文件夹]**&#x200B;来移动文件夹。
+   您还可以通过选择 **[!UICONTROL 文件]** > **[!UICONTROL 移动文件夹]**.
 
 **查看器**
 
@@ -44,11 +44,11 @@ ht-degree: 5%
 * 桌面现在支持所有HTML5查看器。
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS6E593DEA-7D81-4cd6-84B0-85E8BB274176.html#WS1c46793299cf21d77e926d1613177f0a020-8000.html). -->
-* Scene7查看器HTML5软件开发包中添加了以下增强功能：
+* 在Scene7 Viewer(HTML5软件开发工具包)中添加了以下增强功能：
 
    * JavaScript库增强功能
 
-      为大多数组件添加了对[!DNL Internet Explorer] 7、8和9的支持。 在组件的JavaScript文件中嵌入了默认CSS属性。 修订了JSON请求，以支持同一网页上的多个查看器。
+      添加了 [!DNL Internet Explorer] 7、8和9到大多数组件。 在组件的JavaScript文件中嵌入了默认CSS属性。 修订了JSON请求，以支持同一网页上的多个查看器。
 
    * 为按钮和色板添加了对工具提示的支持。
    * 在FlyoutZoomView组件中添加了对叠加消息的支持。
@@ -56,7 +56,7 @@ ht-degree: 5%
 
       添加了对二维旋转集的支持。 优化了SpinView组件的图像预加载过程。 优化了SpinView组件的图像交换。 添加了对一维和二维内联旋转集的支持。
 
-* 为简化网页上查看器的部署，已进行了广泛的&#x200B;**[!UICONTROL 嵌入代码]**&#x200B;增强。 增强功能包括：
+* 广泛 **[!UICONTROL 嵌入代码]** 增强了功能以简化在网页上部署查看器的过程。 增强功能包括：
 
    * 在同一网页上添加了对多个通用视频查看器的支持。
    * 在网页上添加了对多个现有AS3/AS2查看器的支持。
@@ -89,13 +89,13 @@ ht-degree: 5%
 **内容模板（动态横幅和Web-To-Print）**
 
 * 动态横幅包含改进的HTML5支持，包括ActionScript/Javascript交叉编译
-* [!DNL Dynamic Banners]的一键式预览功能现在在Firefox中可用
-* **[!UICONTROL Web-To-Printnow允许在PDF]** 输出中动态创建超链接
-* **[!UICONTROL Web到打印支持上]** 下文连 [!DNL OpenType] 字和过滤 [!DNL Adobe Illustrator] 器 [!DNL Adobe InDesign] 效果
+* 一键预览 [!DNL Dynamic Banners] 现已在Firefox中提供
+* **[!UICONTROL Web-To-Print]** 现在允许在PDF输出中动态创建超链接
+* **[!UICONTROL Web-To-Print]** 支持 [!DNL OpenType®] 上下文连字和 [!DNL Adobe Illustrator] 和 [!DNL Adobe InDesign] 滤镜效果
 
 **eVideo**
 
-* **[!UICONTROL 应用程序设置]**&#x200B;的&#x200B;**[!UICONTROL 常规设置]**&#x200B;页面上新增的&#x200B;**[!UICONTROL 显示编码视频]**&#x200B;选项，这意味着您现在可以将视频资产合并到单个资产类型中，以简化搜索和浏览过程。
+* 新 **[!UICONTROL 显示编码视频]** 选项 **[!UICONTROL 常规设置]** 页面 **[!UICONTROL 应用程序设置]** 这意味着您现在可以将视频资产合并到单个资产类型中，以简化搜索和浏览过程。
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WSCCBA9D3A-06A3-4f29-AF6B-36CBB2A655F1.html).  -->
 
@@ -106,7 +106,7 @@ ht-degree: 5%
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WSE86ACF2B-BD50-4c48-A1D7-9CD4405B62D0.html#WS1c46793299cf21d7-39fae9c1131ba8968f7-7fff.html). -->
 * 改进了视频编码性能。
-* 在[!DNL Blackberry]和[!DNL WinMobile 7]设备上添加了对视频播放的支持，包括通过&#x200B;**[!UICONTROL 通用查看器]**&#x200B;进行部署。
+* 在 [!DNL BlackBerry®] 和 [!DNL WinMobile 7] 设备，包括通过 **[!UICONTROL 通用查看器]**.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS6E593DEA-7D81-4cd6-84B0-85E8BB274176.html#WS1c46793299cf21d77e926d1613177f0a020-8000.html) or the [eVideo chapter](http://help.adobe.com/en_US/scene7/using/WS53492AE1-6029-45d8-BF80-F4B5CF33EB08.html). -->
 
@@ -116,10 +116,10 @@ ht-degree: 5%
 
 **元数据和相似度搜索**
 
-* 由于若干技术问题，**[!UICONTROL 相似度搜索]**&#x200B;功能不再包含在[!DNL Scene7 Publishing System]中。 [!DNL Adobe] 计划在成像技术方面进行替代投资，以便将来集成到Scene7。
+* 功能 **[!UICONTROL 相似性搜索]** 不再包含在 [!DNL Scene7 Publishing System] 因几个技术问题。 [!DNL Adobe] 计划在成像技术方面进行替代投资，以便将来集成到Scene7。
 
 **Adobe Digital Marketing Suite集成**
 
-* [!DNL Scene7] 现在支持 [!DNL Adobe Test&Target] HTML选件进行个性化。根据[!DNL Test&Target]配置文件脚本和促销活动规则动态组合高度相关的横幅内容的选件元素。
+* [!DNL Scene7] 现在支持 [!DNL Adobe Test&Target] HTML个性化选件。 根据 [!DNL Test&Target] 配置文件脚本和营销活动规则。
 
-* 与[!DNL Adobe CQ]的扩展集成提供了基于文件夹的资产存储库同步和统一的内容界面。 在[!DNL Scene7]帐户中访问、浏览已发布的动态资产，并直接将这些资产插入到CQ页面模板中。
+* 与的扩展集成 [!DNL Adobe CQ] 提供了基于文件夹的资产存储库同步和统一的内容界面。 在 [!DNL Scene7] 考虑CQ页面模板。
