--- a/help/s7-release-notes/s7rn66.md
+++ b/help/s7-release-notes/s7rn66.md
@@ -1,20 +1,20 @@
 ---
-description: “最新发行说明描述了Adobe Scene7 Publishing System 6.6的最新功能、增强功能和修复，它是Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分。”
-solution: Experience Manager
 title: Scene7 Publishing System 6.6发行说明
+description: “最新发行说明描述了Adobe Scene7 Publishing System 6.6的最新功能、增强功能和修复，它是Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分。”
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 19c323db-7da8-47ae-a9d9-4ead4b8d739e
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '535'
+source-wordcount: '530'
 ht-degree: 1%
 
 ---
 
 # Scene7 Publishing System 6.6发行说明{#scene-publishing-system-release-notes}
 
-此最新发行说明描述了Adobe Marketing Cloud的Adobe Scene7 Publishing System 6.6部件的最新功能、增强功能和修复。
+此最新发行说明描述了Adobe Experience Cloud的Adobe Scene7 Publishing System 6.6部件的最新功能、增强功能和修复。
 
 ## 重要通知：DHTML查看器生命周期终止 {#section-58966909d9ec4eacbb6153b83b1642d3}
 
@@ -36,7 +36,7 @@ ht-degree: 1%
 
 * HTML5 SDK
 
-   Scene7查看器HTML5软件开发包中添加了以下功能和增强功能：
+   Scene7 Viewer(HTML5 Software Development Kit)中添加了以下功能和增强功能：
 
    * 处理色板，如拖动第一个或最后一个色板、色板对齐、一次滚动一页色板以及容器填充。
    * 增加了对缩放视图、缩放目标、色板、导航视图和旋转视图透明度的支持。
@@ -47,13 +47,13 @@ ht-degree: 1%
 
 * 开箱即用的HTML5查看器
 
-   * 您现在可以开发一个视频播放器，该播放器能够在台式计算机和多个移动设备上播放，所有这些都可以从一个平台进行。 您可以通过Scene7查看器（HTML5 Software Development Kit，版本6.5）创建此功能。
+   * 您现在可以开发一个视频播放器，该播放器能够在台式计算机和多个移动设备上播放，所有这些都可以从一个平台进行。 您可以通过Scene7 Viewer(HTML5 Software Development Kit，版本6.5)创建此功能。
    * 现在，桌面计算机和移动设备上都提供了新的嵌入式弹出缩放(FlyoutViewer)图像查看器。
 
 * 嵌入代码
 
    * 通用查看器嵌入SDK现在与Scene7发布系统集成。
-   * 在JavaScript（而非iframe）中嵌入HTML5查看器。
+   * 将HTML5查看器嵌入JavaScript（而非iframe）。
    * 在通用查看器嵌入中添加了对资产和查看器修饰符的支持。
    * 在通用查看器嵌入代码中添加了对JavaScript函数的支持，例如通过SiteCatalyst跟踪。
 
@@ -92,8 +92,6 @@ ht-degree: 1%
 
 **eVideo**
 
-* 一种新的开箱即用通用HTML5视频播放器，允许您在HTML5中一次设计所有视频组件（如按钮和播放计时器），然后跨多个设备和屏幕提供最佳的视频播放体验。
-
-<!--   See [About using HTML5 video](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c064dcc4e2c1399dadca0f-8000.html). -->
+* 一种全新的通用HTML5视频播放器，允许您在HTML5中设计一次所有视频组件（如按钮和播放计时器），然后跨多个设备和屏幕提供最佳的视频播放体验。
 
 * 改进了视频编码周转时间，即读取一个视频文件，然后输出到多个编码。
