--- a/help/s7-release-notes/s7rn67.md
+++ b/help/s7-release-notes/s7rn67.md
@@ -1,20 +1,20 @@
 ---
-description: “最新发行说明描述了Adobe Scene7 Publishing System 6.7的最新功能、增强功能和修复，它是Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分。”
-solution: Experience Manager
 title: Scene7 Publishing System 6.7发行说明
+description: “最新发行说明描述了Adobe Scene7 Publishing System 6.7的最新功能、增强功能和修复，它是Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分。”
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 79c7be34-bb31-4581-8919-934fada9410e
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '544'
+source-wordcount: '546'
 ht-degree: 4%
 
 ---
 
 # Scene7 Publishing System 6.7发行说明{#scene-publishing-system-release-notes}
 
-此最新发行说明描述了Adobe Marketing Cloud的Adobe Scene7 Publishing System 6.7部件的最新功能、增强功能和修复。
+此最新发行说明描述了Adobe Experience Cloud的Adobe Scene7 Publishing System 6.7部件的最新功能、增强功能和修复。
 
 ## 重要通知：DHTML查看器生命周期终止 {#section-58966909d9ec4eacbb6153b83b1642d3}
 
@@ -24,11 +24,11 @@ ht-degree: 4%
 
 **资产管理和发布**
 
-* 在&#x200B;**元数据** > **用户定义的字段**&#x200B;中通过应用程序设置添加了对激活时间的用户界面支持，以指定特定启动或销售的资产延迟交付。
+* 通过 **元数据** > **用户定义的字段** 为特定启动或销售指定资产的延迟交付。
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS08F62297-36A5-4c35-9D4E-5BE38C41D39C.html). -->
 
-* 增加了在上传时和在使用新的批集类型&#x200B;**多轴旋转集**&#x200B;重新处理期间自动生成多轴2D旋转集的功能。
+* 增加了在上传时和在使用新的“批集类型”重新处理期间自动生成多轴2D旋转集的功能 **多轴旋转集**.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WSf6ef983f54a76485-20cc30b112624e7b244-7fff.html). -->
 
@@ -60,11 +60,11 @@ ht-degree: 4%
 
    添加了对字幕的支持。
 
-   添加了对在Blackberry移动设备上播放的支持。
+   添加了对在BlackBerry®移动设备上播放的支持。
 
 * 视频洗刷
 
-   添加了对单击清洗器进行搜寻的支持。
+   添加了对选择要搜寻的清洗器的支持。
 
 * 缩放视图
 
@@ -73,18 +73,18 @@ ht-degree: 4%
    已删除全局事件处理程序：window.onunload。
 
 增强功能
-**现成HTML5查看器**
+**开箱即用的HTML5查看器**
 
-* 新的缩放查看器（`Universal_HTML5_Zoom_dark`和`Universal_HTML5_Zoom_light`）
-* 新的图像集查看器（`Universal_HTML5_ImageSet_dark`和`Universal_HTML5_ImageSet_light`）
-* 新增了eCatalog查看器（`Universal_HTML5_eCatalog`，增加了对社交媒体共享功能的支持。）
+* 新的缩放查看器( `Universal_HTML5_Zoom_dark` 和 `Universal_HTML5_Zoom_light`)
+* 新的图像集查看器( `Universal_HTML5_ImageSet_dark` 和 `Universal_HTML5_ImageSet_light`)
+* 新的eCatalog查看器( `Universal_HTML5_eCatalog` 添加了对社交媒体共享功能的支持。)
 
    * 添加了对社交媒体共享功能的支持。
 
-* 新的旋转查看器（`Universal_HTML5_SpinSet_dark`和`Universal_HTML5_SpinSet_light`）
+* 新的旋转查看器( `Universal_HTML5_SpinSet_dark` 和 `Universal_HTML5_SpinSet_light`)
 
-* 新的混合媒体集查看器（`Universal_HTML5_MixedMedia_dark`和`Universal_HTML5_MixedMedia_light`）
-* 新增了eVideo查看器(`Universal_HTML5_Video_Social`)，增加了对社交媒体共享功能和隐藏式字幕的WebVTT字幕文件(.vtt)的支持。
+* 新的混合媒体集查看器( `Universal_HTML5_MixedMedia_dark` 和 `Universal_HTML5_MixedMedia_light`)
+* 新的eVideo查看器( `Universal_HTML5_Video_Social` 增加了对社交媒体共享功能和隐藏式字幕WebVTT字幕文件(.vtt)的支持。
 
    * 添加了对社交媒体共享功能的支持。
    * 添加了对隐藏式字幕的支持。
@@ -98,17 +98,17 @@ ht-degree: 4%
 
 * 改进了在SPS中搜索元数据时的性能
 
-   在&#x200B;**个人设置**&#x200B;的&#x200B;**浏览器**&#x200B;组中，现在默认为所有用户帐户取消选择&#x200B;**搜索**&#x200B;中包含UDF（用户定义字段）选项，以提高您运行的大多数元数据搜索的系统性能。
+   在 **[!UICONTROL 个人设置]**，在 **[!UICONTROL 浏览器]** 组、期权 **[!UICONTROL 在搜索中包含UDF（用户定义的字段）]** 默认情况下，所有用户帐户都将取消选中（关闭）。 通过将选项设置为off ，可以提高您运行的大多数元数据搜索的系统性能。
 
 <!--   [Personal Setup](http://help.adobe.com/en_US/scene7/using/WSCAAE9C8A-F172-43a8-B134-6163E7C80218.html). -->
 
-如果包括用户定义的字段对于您的大部分元数据搜索有帮助，您可以选择此选项以将其打开。作为替代方法，使用&#x200B;**高级搜索**&#x200B;可比包含所有用户定义的字段更有向、更快的搜索。
+如果包括用户定义的字段对于您的大部分元数据搜索有帮助，您可以选择此选项以将其打开。作为替代方法，请使用 **高级搜索** 以便比包含所有用户定义的字段更有方向、更快地进行搜索。
 
 <!--   [Advanced search](http://help.adobe.com/en_US/scene7/using/WS259993e42159a215-1c6a66df1265272619e-7ff5.html). -->
 
 **eVideo**
 
-* 通过WebVTT文件，向新的&#x200B;**Universal_HTML5_Video_Social**&#x200B;查看器添加了隐藏式字幕支持。
+* 向新增的 **Universal_HTML5_Video_Social** 查看器。
 
 <!--   [Adding captions to eVideo](http://help.stage.adobe.com/en_US/scene7/using/WS98ca2e6790647c06-6f6f53e137b959f094-8000.html). -->
 
@@ -116,7 +116,7 @@ ht-degree: 4%
 
    以前，主MP4或F4V源文件会自动添加到系统生成的自适应视频集中。 因此，这些大型主源文件有时会导致视频播放问题。 现在，当您将一系列编码预设应用于主视频时，您可能会看到没有主源文件的自适应视频集。
 
-* 新增了&#x200B;**自适应视频编码（16:9或4:3）**。
+* 新建 **自适应视频编码（16:9或4:3）**.
 
    此新选项将所有5个16:9自适应视频编码预设和所有5个4:3自适应视频编码预设合并到一个主编码预设列表中。 当您使用这个新选项上传视频时，它会自动应用正确的编码预设以匹配源视频的宽高比。 （此设置取代了以前的自适应视频编码预设。）
 
