--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -1,24 +1,24 @@
 ---
 title: Scene7 Publishing System 6.8发行说明（2014年5月）
-description: “最新发行说明描述了Adobe Scene7 Publishing System 6.8的最新功能、增强功能和修复，它是Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分。”
+description: “最新发行说明描述了Adobe Scene7 Publishing System 6.8的最新功能、增强功能和修复，它是Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分。”
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: f930fbf8-2aa4-4e6e-ad8d-4f0a0c76ff0e
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1897'
+source-wordcount: '1877'
 ht-degree: 0%
 
 ---
 
 # Scene7 Publishing System 6.8发行说明（2014年5月）{#scene-publishing-system-release-notes-may}
 
-此最新发行说明描述了Adobe Marketing Cloud中Adobe Scene7解决方案的Adobe Experience Manager 6.8部件的最新功能、增强功能和修复。
+此最新发行说明描述了Adobe Experience Cloud中Adobe Scene7解决方案的Adobe Experience Manager 6.8部件的最新功能、增强功能和修复。
 
 ## Scene7 Publishing System 6.8发行说明（2014年5月） {#topic-4517aab837ea4d6d8204425958860e5a}
 
-此最新发行说明描述了[!DNL Adobe Marketing Cloud]中Adobe Experience Manager解决方案[!DNL Adobe Scene7 Publishing System] 6.8部件的最新功能、增强功能和修复。
+此最新发行说明描述了 [!DNL Adobe Scene7 Publishing System] 6.8部分Adobe Experience Manager解决方案 [!DNL Adobe Experience Cloud].
 
 * [发行亮点](s7rn68.md#section-524cffc79c1f4bb38627a5ecccd0bf52)
 * [查看器](s7rn68.md#section-609885a9c8514a4095da74a0b526138d)
@@ -33,7 +33,7 @@ ht-degree: 0%
 
 ## 发行亮点 {#section-524cffc79c1f4bb38627a5ecccd0bf52}
 
-* 增加了对响应式Web设计的支持 — 基于断点的响应式图像提供以及基于页面布局动态调整大小的响应式HTML5查看器（图像集、视频、混合媒体、eCatalog、旋转集、样式集、缩放）。
+* 增加了对响应式Web设计的支持 — 基于断点的响应式图像服务和基于页面布局动态调整大小的响应式HTML5查看器（图像集、视频、混合媒体、eCatalog、旋转集、样式集、缩放）。
 * Adobe Analytics视频报表集成。
 * 高级HTML5查看器自定义 — 创建与嵌入网页的自定义查看器交互。
 * 图像增强 — 增加了在交付时将图像裁剪到嵌入路径的功能。
@@ -44,38 +44,38 @@ ht-degree: 0%
 
 * Windows操作系统的最低系统要求现在为Windows 7。
 * Internet Explorer的最低系统要求现在为版本9。
-* Mac OS的最低系统要求现在为Mac OS 10.8。
+* macOS的最低系统要求现在为macOS 10.8。
 * Safari的最低系统要求现在为版本6。
 
 重构了以下内容：
 
-* 支持响应式设计的HTML5查看器。
+* HTML5查看器，支持响应式设计。
 * HTML5查看器，用于使用CSS输入和大小标记控制桌面和移动设备上的显示。
 
 现在支持以下内容：
 
 * Adobe Analytics视频报表集成了HTML5视频查看器和混合媒体查看器。
-* 在同一页面上跟踪多个HTML5查看器的事件。
-* 在HTML5缩放查看器和HTML5混合媒体查看器中添加了`SetIndicator`，以便直观地显示移动设备上的色板。
-* 添加了`getComponent` API以允许外部访问HTML5查看器组件。
-* 作为单个JSON对象传递的HTML5查看器配置参数。
+* 同一页面上多个HTML5查看器的事件跟踪。
+* 添加了 `SetIndicator` HTML5缩放查看器和HTML5混合媒体查看器，以便在移动设备上直观地显示色板。
+* 添加了 `getComponent` 允许外部访问HTML5查看器组件的API。
+* HTML作为单个JSON对象传递的5个查看器配置参数。
 * WebVTT字幕将作为JSON对象传递，无需规则集配置。
-* HTML5 eCatalog查看器中用于链接图像的JavaScript模板会映射到外部页面。
+* HTML5 eCatalog查看器中用于链接图像的JavaScript模板映射到外部页面。
 * 链接到HTML5 eCatalog查看器中的页面。
-* `stagesize` 到HTML5弹出查看器。
+* `stagesize` HTML5弹出查看器。
 * `initComplete` 用于在查看器之后触发函数的HTML5查看器的处理程序。
-* 用于支持第三方跟踪的HTML5查看器的Analytics处理程序。
+* 用于HTML5查看器以支持第三方跟踪的Analytics处理程序。
 * 添加了“全选”按钮，以便更轻松地获取用于社交共享的链接和嵌入代码。
 * 为FlyoutZoomView添加了大小调整。
 * 在与响应式设计一起使用时，为FlyoutZoomView设置图像重新加载断点。
 * 添加了对调整音量的点击支持。
 * SpinView和ZoomView，在不与查看器交互时，将手势应用于嵌入网页。
-* 向SpinView和ZoomView添加了`unload()` API，以允许在运行时处理组件。
+* 添加了 `unload()` 用于SpinView和ZoomView的API，允许在运行时处理组件。
 * 在与查看器不进行交互时，用于将手势应用于嵌入网页的视频查看器。
 * 为ZoomView设置初始缩放区域。
-* 当无法缩放时，ZoomView将隐藏`IconEffect`组件
+* 要隐藏的缩放视图 `IconEffect` 组件
 
-另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
+另请参阅 [查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
 <!-- **HTML5 Viewers SDK**
 
@@ -98,24 +98,24 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 * 实施了API，用于从资产中删除元数据值(deleteAssetMetadata)。
 * 更改了默认搜索行为以包含dc.subject。
 * 已将密码重置机制（忘记密码）更改为多步进程以避免DOS。
-* 将忘记密码的电子邮件从HTML转换为纯文本，以防止列入阻止列表。
+* 要防止列入阻止列表，请将忘记密码的电子邮件表单HTML转换为纯文本。
 * 删除了默认角色。
-* 除了能够通过服务器目录上传(ftp)和上传URL将内容上传到Scene7发布系统之外，您现在还可以使用HTTPPOST上传内容。 有关使用HTTPPOST的更多信息，请参阅[图像生产系统API](/help/aem-ips-api/c-overview.md)。
+* 除了能够通过服务器目录上传(ftp)和上传URL将内容上传到Scene7发布系统之外，您现在还可以使用HTTPPOST上传内容。 请参阅 [图像生成系统API](/help/aem-ips-api/c-overview.md) 有关使用HTTPPOST的更多信息。
 
 ## 错误修复 {#section-456515477c8a4aa69309de43292ce5ed}
 
 **查看器**
 
 * 潜在的Flash快速缩放和弹出查看器安全问题。
-* 由于无法识别的UserAgent，未加载HTML5查看器。
-* 对于包含图像映射的页面，HTML5 eCatalog查看器鼠标拖放在Internet Explorer中不起作用。
+* HTML5查看器由于无法识别UserAgent而未加载。
+* HTML5 eCatalog查看器在包含图像映射的页面上的Internet Explorer中，鼠标拖放不起作用。
 * HTML5视频查看器阻止访问取消阻止Flash插件。
 * HTML5查看器阻止在Firefox浏览器上打印。
-* 启动或重置缩放时，HTML5缩放查看器会显示轻微抖动。
+* HTML5缩放查看器在启动或重置缩放时显示轻微抖动。
 * 对HTML5和AS3查看器支持HTTPS。
 * autoResize不应位于HTML弹出查看器复制URL/嵌入代码中。
-* HTML5视频查看器复制URL中没有videoserverurl修饰符。
-* 参数`contenturl`来自发布服务器HTML5查看器预览URL。
+* HTML5视频查看器副本URL中没有videoserverurl修饰符。
+* 参数 `contenturl` 来自发布服务器HTML5查看器预览URL。
 
 **成像**
 
@@ -130,10 +130,10 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 * 对于用户角色，不应显示文件移动文件夹。
 * 在“详细信息”视图中看不到某些选项卡。
 * 安装Flashplayer调试版本时出现Web-to-print编辑错误。
-* “之后的空间”不起作用；它应使用“sa”，当前为“margb”。
-* 初始化公司设置时，Scene7 Publishing System会在API `<createMetadataField>`中发送重复的选项`<defaultValue>`。
+* “之后的空间”不起作用；它应使用 `sa`，当前为 `margb`.
+* 初始化公司设置时，Scene7 Publishing System会发送重复选项 `<defaultValue>` 在API中 `<createMetadataField>`.
 
-* Flash插件和Scene7 Publishing System因大量文件夹没有足够的Flash内存而崩溃。
+* Flash插件和Scene7 Publishing System因许多文件夹没有足够的Flash内存而崩溃。
 * 删除“日期/时间”用户定义字段的值时，Scene7 Publishing System不会向IPS（图像发布系统）发送请求。
 * 如果启用了Evideo编码选项，则重新处理PDF或PSD文件时，会出现“自适应视频编码”警告消息。
 * 启用SSL后无法导出资产。
@@ -142,7 +142,7 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 * 如果未选择任何预设，则在上传期间会应用所有批量集预设。
 * Scene7发布系统在上传s7info内容时通过HTTP请求s7info。
 * “忘记密码”电子邮件中的URL是HTTP，即使它来自SSL Scene7 Publishing System。
-* 特殊字符在HTML格式的“忘记密码”电子邮件中进行编码，导致密码无法正确显示。
+* 特殊字符在格式为“忘记密码”的HTML电子邮件中进行编码，导致密码无法正确显示。
 * Scene7试用帐户的欢迎电子邮件中缺少FTP帐户信息
 * 同时选择项目选项和裁剪选项时，重新处理作业失败。
 * 将作业选项重置为公司默认值时，上传文件不起作用。
@@ -151,36 +151,36 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 ## 已知问题 {#section-b2608177928b4174b080d89c938bb0d3}
 
-* Adobe Illustrator CC(Creative Cloud)和Adobe InDesign CC的2014年5月更新预计会引入与创建Scene7 FXG的插件不兼容的问题。 这些不兼容性会影响Scene7 Web-to-Print解决方案的用户。 如果您使用Scene7 Web-to-Print，请勿将Illustrator和InDesign升级到此Creative Cloud更新。 请改用2014年5月之前的版本。 Adobe Systems预计，在2014年秋季，将创建的Scene7 FXG与较新版本的Illustrator和InDesign的兼容性恢复为最新版本。
+* Adobe Illustrator和Adobe InDesign的2014年5月更新预计会引入与创建Scene7 FXG的插件不兼容的问题。 这些不兼容性会影响Scene7 Web-to-Print解决方案的用户。 如果您使用Scene7 Web-to-Print，请勿将Illustrator和InDesign升级到此Creative Cloud更新。 请改用2014年5月之前的版本。 Adobe Inc预计，在2014年秋季，将创建的Scene7 FXG与较新版本的Illustrator和InDesign的兼容性恢复为最新版本。
 * 当通用查看器预设包含禁用的默认AS2预设时，“嵌入代码”按钮不起作用。
 * 重新处理自适应视频集时，始终会创建新的自适应视频集。
 * 在详细信息中添加“时间”后，“作业详细信息”对话框的用户界面在右侧被截断。
 
 ## 不再支持的功能 {#section-7b04b6fdb8d1473880ccaf84211254ad}
 
-* 在Scene7 6.9秋季版本中，将取消支持文本连字。 连字词典定义了如何分割单词并用连字符进行连字，以支持最佳文本流。
+* 在Scene7 6.9秋季版本中，不支持使用文本连字符。 连字词典定义了如何分割单词并用连字符进行连字，以支持最佳文本流。
 * 自2014年1月31日起，Scene7正式停止对DHTML查看器平台的支持。
-* 动态(Flash)横幅将在此版本中弃用。 随着其他用于创建、管理和传递个性化网站横幅的技术的出现，此功能的采用率一直很低。 Scene7动态(Flash)横幅功能将继续在服务器端工作，但将不再受支持。
+* 动态(Flash)横幅将在此版本中弃用。 随着其他用于创建、管理和传递个性化网站横幅的技术的出现，此功能的采用率一直很低。 Scene7动态(Flash)横幅功能在服务器端继续工作，但不再受支持。
 * 提醒：自上一个Scene7版本起，已正式取消支持元数据服务器和使用关联的API。
-* Scene7Creative Suite扩展(Flash面板)将在2014年年底被弃用。 内容摄取工作流的进一步开发将重点关注Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7,Scene7发布系统中的上传和导出功能将保留并可改为使用。
-* 自2014年5月起，当Scene7中的缓存失效完成时，Akamai不再支持电子邮件通知。 CDN失效的典型处理时间约为八分钟。 如果请求队列较大或URL数量较大，则处理时间可能会稍长一些。
+* Scene7Creative Suite扩展(Flash面板)在2014年底被弃用。 内容摄取工作流的进一步开发将重点关注Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7,Scene7发布系统中的上传和导出功能将保留，并可以改用。
+* 自2014年5月起，当Scene7中的缓存失效完成时，Akamai不再支持电子邮件通知。 CDN失效的典型处理时间约为八分钟。 如果请求队列较大或URL较多，则处理时间可能会稍长一些。
 * “详细信息”视图的URL和嵌入代码选项卡中的“通用预设”类别。
 * 用于视频详细信息视图的RTMP流。
 * “Email Communications”和Scene7 Publishing System的SendMailSimple.jsp Servlet。
 * Scene7 FTP帐户部分。
 * dc.title，因为它导致IPS（图像发布系统）实例下移。
-* HTML5查看器以全屏模式显示的社交功能。
-* 在HTML5查看器的全屏模式下显示关闭按钮。
+* 在HTML5查看器上以全屏模式显示的社交功能。
+* 在HTML5查看器上以全屏模式显示的关闭按钮。
 
 ## Dynamic Media Image Serving Viewers 5.0.1发行说明 {#section-3fc1a827bcc84c0488229d310086ad8e}
 
-请参阅[https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html)
+请参阅 [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html)
 
 ## Scene7 SDK 2.7.1的新增功能和错误修复 {#section-b82b4f546ce44a769e94fb1493511035}
 
 **常规**
 
-* 提高了iOS6的最低要求。
+* 对iOS6的最低要求增加。
 * 已修复：在全屏模式下，Safari工具提示会在屏幕外移动。
 * 重构了工具提示以解决各种错误。
 
@@ -190,8 +190,8 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 **容器**
 
-* 已修复：从全屏返回并交换资产后，容器大小不正确。
-* 已修复：如果通过CSS转换移动容器，则容器坐标不正确。
+* 已修复：从全屏返回和交换资产后，容器大小不正确。
+* 已修复：如果使用CSS转换移动容器，则容器坐标不正确。
 
 **EmailShare**
 
@@ -213,13 +213,13 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 **調色板**
 
-* 已修复：`selectSwatch`方法在嵌入到`initViewer()`函数中时不会触发。
+* 已修复： `selectSwatch` 嵌入到 `initViewer()` 函数。
 
 **SocialShare**
 
 * 增加了对轴承修饰符的支持，以控制共享按钮的布局位置。
 * 添加了用于控制与社交功能交互时的暂停/播放的事件。
-* 已修复：缩放时，“社交共享”图标不会淡出`controlbar`。
+* 已修复：“社交共享”图标不会淡出 `controlbar` 缩放。
 * 已修复：首次使用Galaxy SII时，“社交共享”图标未显示。
 * 已修复：在iPad3上，社交共享模式对话框不以全屏模式显示。
 * 已修复：在使用Safari 5.1的Mac上，社交共享模式对话框不以全屏模式显示。
@@ -227,12 +227,12 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 **ThumbnailGridView**
 
-* 已修复：ThumbnailGridView不发送`AssetEvent.ASSET_CHANGED`。
+* 已修复：ThumbnailGridView不发送 `AssetEvent.ASSET_CHANGED`.
 
 **VideoPlayer**
 
-* 添加了对`initialBitRate`修饰符的支持，用于选择用于桌面上初始播放的比特率。
-* 实施了iPhone视频代理，以解决iPhone设备上的视频问题。
+* 添加了 `initialBitRate` 用于选择在桌面上进行初始播放所用比特率的修饰符。
+* 已实施iPhone视频代理，以解决iPhone设备上的视频问题。
 * 添加了对事件侦听器的支持，以便在调用社交功能时暂停播放。
 * 现在，设置为自动的播放模式在Safari桌面上使用本机播放器。
 * 已修复：使用Flash播放在IE8上生成安全警告的HTTPS协议。
@@ -241,10 +241,10 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 **ZoomView**
 
-* 已修复：在Android上放大图像或旋转设备后显示的工件。
+* 已修复：在Android™上放大图像或旋转设备后显示的工件。
 
 ## S7OnDemand 5.0.1的新增功能和错误修复 {#section-ba3a595134144711bf27dd8dca249e5d}
 
-* 已修复：HTML5和AS3查看器支持HTTPS。
+* 已修复：对HTML5和AS3查看器支持HTTPS。
 * 为HTML5查看器嵌入代码添加了响应式支持。
-* HTML5查看器的嵌入代码会将配置参数作为单个JSON对象进行传递。
+* HTML5查看器的嵌入代码将配置参数作为单个JSON对象进行传递。
