--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -1,24 +1,24 @@
 ---
-description: “最新发行说明描述了Adobe Scene7 Publishing System 6.9(Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分)的最新功能、增强功能和修复。”
-solution: Experience Manager
 title: Scene7 Publishing System 6.9发行说明（2014年10月）
+description: “最新发行说明描述了Adobe Scene7 Publishing System 6.9(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的最新功能、增强功能和修复。”
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1896'
+source-wordcount: '1871'
 ht-degree: 1%
 
 ---
 
 # Scene7 Publishing System 6.9发行说明（2014年10月）{#scene-publishing-system-release-notes-october}
 
-此最新发行说明描述了Adobe Marketing Cloud中Adobe Scene7解决方案的Adobe Experience Manager 6.9部件的Publishing System 6.9的最新功能、增强功能和修复。
+此最新发行说明描述了Adobe Experience Cloud中Adobe Scene7解决方案的Adobe Experience Manager 6.9部件的Publishing System 6.9的最新功能、增强功能和修复。
 
 ## Scene7 Publishing System 6.9发行说明（2014年10月） {#topic-1d3011ecca71488abe0d8156a9fc1b97}
 
-此最新发行说明描述了[!DNL Adobe Marketing Cloud]的Adobe Experience Manager解决方案[!DNL Adobe Scene7 Publishing System] 6.9部件的最新功能、增强功能和修复。
+此最新发行说明描述了 [!DNL Adobe Scene7 Publishing System] 6.9部分Adobe Experience Manager解决方案 [!DNL Adobe Experience Cloud].
 
 * [Scene7 Publishing System 6.9发行要点](s7rn69.md#section-2ed72b7902be4509876d81f25b5632ce)
 * [成像](s7rn69.md#section-98a61ea9a09940639f357f36969d6e55)
@@ -33,25 +33,25 @@ ht-degree: 1%
 
 6.9版具有新的高级eCatalog查看器、内联缩放查看器、视频播放器等功能。 这些新功能让您能够设计和提供丰富、响应式、交互式的体验，从而提高所有数字渠道的转化率。
 
-* **高级eCatalog查看器** — 现在，您可以通过目录、页面动画、图像映射叠加图等内容，提供更加引人入胜的在线目录查看体验，并突出显示产品和服务，以便客户能够直接链接到可提高转化的页面。
+* **高级eCatalog查看器** — 现在，通过目录、页面动画、图像映射叠加图等，您可以提供更吸引人的在线目录查看体验。 您可以突出显示产品和服务，以便客户能够直接链接到可提高转化的页面。
 * **新的内联缩放查看器** — 无需单击任何按钮即可轻松进行窗口内缩放，这样您就可以缩放并保持页面上所有产品详细信息的可见性。
 * **视频播放器增强功能** — 现成的视频播放器现在包含用于连续视频播放的自动循环功能，以及章节导航，以便轻松查找长形式视频中的内容。 混合媒体视频播放器现在支持为全球范围设置字幕。
-* **响应式设计**  — 通过为每个断点定义不同的图像预设或修饰符，进一步优化响应式图像体验的质量。
+* **响应式设计**  — 通过为每个断点定义不同的图像预设或修饰符，进一步优化响应式成像体验的质量。
 * **查看器自定义**  — 您现在可以动态设置和修改查看器样式和行为。
-* **可视化配置器的安全预览**  — 在将个性化体验推送到生产之前，可安全地预览和测试个性化体验的可视化呈现。
-* **SSO（单点登录）功能**  — 现在，您可以从Adobe Marketing Cloud无缝启动Scene7，并使用Adobe ID登录到Scene7。
+* **Visual Configurator安全预览**  — 在将个性化体验推送到生产环境之前，安全地预览和测试个性化体验的可视呈现。
+* **单点登录(SSO)功能**  — 现在，您可以从Adobe Experience Cloud无缝启动Scene7，并使用Adobe ID登录到Scene7。
 
-   如果您希望设置SSO以便将其与Scene7一起使用，请联系Adobe技术支持。 准备好以下信息，以便您的Marketing Cloud和Scene7帐户可以关联在一起：您的Adobe Marketing Cloud组织名称；您的Scene7公司名称；和你的地理区域。
+   如果您希望设置SSO以便将其与Scene7一起使用，请联系Adobe技术支持。 准备好以下信息，以便您的Experience Cloud和Scene7帐户可以关联在一起：您的Adobe Experience Cloud组织名称；您的Scene7公司名称；和你的地理区域。
 
 ## 成像 {#section-98a61ea9a09940639f357f36969d6e55}
 
-* **增强的响应式支持**  — 通过为每个断点定义不同的图像预设或修饰符，进一步优化响应式图像体验的质量。请参阅[使用响应式静态图像库](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html)。
+* **增强的响应式支持**  — 通过为每个断点定义不同的图像预设或修饰符，进一步优化响应式成像体验的质量。 请参阅 [使用响应式静态图像库](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html).
 
 ## 视频 {#section-69101b28504543a7ae8a9346d381f913}
 
 * 一种新的现成“自适应视频”编码预设，现在可与任何宽高比配合使用，以创建视频以传送到移动设备、平板电脑和桌面。 使用此新预设编码的已上传源视频将设置为固定高度，而宽度将自动缩放以保留视频的宽高比。 请参阅[用于编码视频文件的视频预设](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html?lang=en#setup)。
 * 通过编码提高了弹性可扩展性和性能。
-* 现在，开箱即用的`Universal_HTML5_MixedMedia_dark`和`Universal_HTML5_MixedMedia_light`查看器中提供了视频字幕。 请参阅[在视频中添加题注](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/video/adding-captions-video.html#video)。
+* 视频字幕现在现成可用 `Universal_HTML5_MixedMedia_dark` 和 `Universal_HTML5_MixedMedia_light` 查看器。 请参阅[在视频中添加题注](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/video/adding-captions-video.html#video)。
 
 <!-- OBSOLETE ## Web-to-Print {#section-17c5591d279a48d3b0aea085a19d6321}
 
@@ -59,8 +59,8 @@ ht-degree: 1%
 
 ## 平台 {#section-6f0721d6ab10495a927f509f026d70f4}
 
-* 呈现服务器请求的安全测试 — 核心图像服务资产和视频资产的安全测试现已扩展，包含晕影。 请参阅[在将资产设为公用资产之前对资产进行测试](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html#upload-publish)。
-* 监控无效CDN缓存功能 — 在选择CDN失效模板（请参阅[常规设置](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html#general-settings)），并从SPS的“文件”菜单中发出&#x200B;**[!UICONTROL 无效CDN]**&#x200B;请求后，用户界面中会弹出一个指示器，用于估算清除缓存需要多长时间。
+* 呈现服务器请求的安全测试 — 核心图像服务资产和视频资产的安全测试现已扩展，包含晕影。 请参阅 [在公开资产之前测试资产](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html#upload-publish).
+* 监控无效CDN缓存功能。 选择CDN失效模板后(请参阅 [常规设置](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html#general-settings))和 **[!UICONTROL 无效CDN]** 发出请求时，现在会弹出一个指示器，其中估计清除缓存需要多长时间。
 
 ## 查看器 {#section-fc0577722d0b431dae3506c8d4e5366f}
 
@@ -68,12 +68,12 @@ ht-degree: 1%
 
 常规
 
-* 使用`insertBefore()` API的组件现在使用`appendChild()` API。
-* 添加了对`setCSS()`、`setModifier()`和`dispose()`方法的支持。
-* 添加了对`getWidth()`和`getHeight()`方法的支持。
-* 添加了对`setPortrait()`和`setLandscape ()`方法的支持。
+* 组件使用 `insertBefore()` API现在使用 `appendChild()` API。
+* 添加了 `setCSS()`, `setModifier()`和 `dispose()` 方法。
+* 添加了 `getWidth()`和 `getHeight()` 方法。
+* 添加了 `setPortrait()` 和 `setLandscape ()` 方法。
 * 已修复 — IE9:s7sdk.event:PageMouseEvent:单击并双击事件会触发浏览器页面崩溃。
-* 添加了`TableOfContents`组件。
+* 添加了 `TableOfContents` 组件。
 
 FlyoutzoomView
 
@@ -90,7 +90,7 @@ ImageMapEffect
 
 * 增加了对使用本地化符号定义的自定义标签的支持。
 * 重构了组件，以改进复杂资产支持。
-* 添加了对返回特定于方向的`MediaSetDesc`对象的支持。
+* 添加了对特定于返回方向的支持 `MediaSetDesc` 对象。
 * 已修复 — 如果将带有逗号的IS修饰符附加到资产ID，则无法显示图像。
 * 已修复 — 图像集：附加到assetID的IS修饰符将被忽略。
 
@@ -101,7 +101,7 @@ PageView
 
 SpinView
 
-* 已修复 — 如果`DIV`具有`text-align:center`样式，则图像已移至右侧。
+* 已修复 — 如果图像在 `DIV` has `text-align:center` 样式。
 
 調色板
 
@@ -123,7 +123,7 @@ VideoScrubber
 
 ZoomView
 
-* 已修复 — 如果`DIV`具有`text-align:center`样式，则图像已移至右侧。
+* 已修复 — 如果图像在 `DIV` has `text-align:center` 样式。
 
 **修复了Scene7 OnDemand5.0.2的错误**
 
@@ -131,45 +131,45 @@ ZoomView
 
 **Dynamic Media Image Serving Viewers 5.1.1的新增功能、增强功能和错误修复**
 
-查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在我们的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
+查看器升级向后兼容，因此，您无需对现有Web代码进行任何更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe的暂存服务器的说明：
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成HTML5查看器的客户，最佳实践是针对我们的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
+在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成HTML5查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
 新增功能和增强功能
 
-另请参阅[Scene7查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
+另请参阅 [Scene7查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
-* 更新了对Internet Explorer 11的支持
-* 更改了查看器以使用“跟踪请求”而不是“页面请求”进行Adobe Analytics跟踪
-* 增加了对使用图像命令和/或基于图像宽度的图像预设的响应式图像的支持
-* 添加了对将本地化文本字符串传递到HTML5查看器的JSON参数的支持
-* 在HTML5查看器色板中增加了对本机页面滚动的支持
-* 改进了对HTML5查看器的复杂资产和图像模板的支持
-* 为HTML5 eCatalog查看器添加了对目录的支持
-* 为HTML5 eCatalog添加了对图像映射叠加与图标的支持
-* 为HTML5 eCatalog查看器添加了对翻页动画的支持
-* 在HTML5 eCatalog中增加了对本机页面滚动的支持
-* 为HTML5弹出查看器添加了对使用highlightmode修饰符显示窄图像的支持
-* 为HTML5弹出查看器增加了对使用zoomfactor修饰符控制图像上调的支持
-* 添加了对HTML5弹出查看器生成的跟踪事件的支持
-* 为HTML5混合媒体查看器添加了对视频（仅限第一个视频）的字幕支持
-* 将HTML5视频和混合媒体查看器的初始比特率默认值增加到1400
-* 为HTML5视频查看器添加了对循环视频播放的支持
+* 更新了对Internet Explorer 11的支持。
+* 更改了要使用的查看器 `Track requests` 而不是 `Page requests` 用于Adobe Analytics跟踪。
+* 增加了对使用基于图像宽度的图像命令和/或图像预设的响应式图像的支持。
+* 添加了对将本地化文本字符串传递到HTML5查看器的JSON参数的支持。
+* 在HTML5查看器色板中增加了对本机页面滚动的支持。
+* 改进了对复杂资产和图像模板的支持，以HTML5查看器。
+* 为HTML5 eCatalog查看器添加了对目录的支持。
+* 为HTML5 eCatalog添加了对图像映射叠加与图标的支持。
+* 为HTML5 eCatalog查看器添加了对翻页动画的支持。
+* 在HTML5 eCatalog中增加了对本机页面滚动的支持。
+* 增加了对使用 `highlightmode` 修改HTML5弹出查看器
+* 增加了对使用 `zoomfactor` HTML5弹出查看器的修饰符。
+* 添加了对HTML5弹出查看器生成的跟踪事件的支持。
+* 向HTML5混合媒体查看器中添加了对视频（仅限第一个视频）的字幕支持。
+* 将HTML5视频和混合媒体查看器的初始比特率默认值增加到1400。
+* 为HTML5视频查看器添加了对循环视频播放的支持。
 * 为HTML5视频查看器添加了对导航章节的支持
 
 错误修复
 
-* HTML5 eCatalog查看器在iPhone上不显示PageIndicator
-* 如果将带有逗号的图像服务修饰符附加到资产ID中，则无法显示图像
-* 图像集：附加到assetID的图像服务修饰符将被忽略
-* Internet Explorer 9:s7sdk.event:PageMouseEvent:单击和双击事件会触发浏览器崩溃页面
-* Internet Explorer 9和Internet Explorer 10:使用JavaScript模板激活图像映射后，eCatalog查看器中断
-* HTML5混合媒体查看器：交换资产类型时，缩放按钮状态不会重置
-* HTML5混合媒体查看器：如果第一个资产是2旋转集，则查看器在响应模式下折叠
-* Firefox:在加载图块之前，弹出窗口上短暂显示损坏的图像图标
-* 捏合手势不生成缩放
+* HTML5 eCatalog查看器在iPhone上不显示PageIndicator。
+* 如果将带有逗号的图像服务修饰符附加到资产ID中，则无法显示图像。
+* 图像集：附加到assetID的图像服务修饰符将被忽略。
+* Internet Explorer 9:s7sdk.event:PageMouseEvent:单击并双击事件会触发浏览器页面崩溃。
+* Internet Explorer 9和Internet Explorer 10:使用JavaScript模板激活图像映射后，eCatalog查看器中断。
+* HTML5混合媒体查看器：交换资产类型时，缩放按钮状态不会重置。
+* HTML5混合媒体查看器：如果第一个资产是2旋转集，则查看器在响应模式下折叠。
+* Firefox:在加载图块之前，弹出窗口上短暂显示损坏的图像图标。
+* 捏合手势不会生成缩放。
 * 电子目录：图像映射：相对链接发生JavaScript错误
 
 已知问题和限制
@@ -186,7 +186,7 @@ HTML5 — 所有查看器
 * 不支持图像提供命令裁剪。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * Iscommands修饰符不支持影响图像大小的图像服务修饰符。
-* CSS样式“显示：当前不支持DIV容器上的“无”。 这包括jQuery hide()方法。
+* CSS样式“显示：当前不支持DIV容器上的“无”。 包括jQuery hide()方法。
 
 HTML5 eCatalog查看器
 
@@ -201,17 +201,17 @@ HTML5混合媒体查看器
 
 HTML5 Social查看器
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符应具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符应具有绝对URL。
 
 HTML5视频查看器
 
-* 海报图像可能遇到“最大大小”错误。 因此，您可能需要提高图像服务发布的限制设置。
+* 海报图像可能遇到“最大大小”错误。 因此，您必须提高“图像提供发布”的限制设置。
 * 如果视频字幕托管的HTML页面来自外部服务器(而非Scene7服务器)，则需要公司规则集。 请联系Adobe技术支持以获取帮助。
-* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比
-* 在iPad或Android设备上，可能会显示黑帧而不是海报图像。
-* 在iPad或Android设备上加载查看器期间，黑帧可能会在屏幕上闪烁。
+* 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
+* 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
+* 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
 * 当在iPad设备上将背景设置为白色/透明时，VideoPlayer组件的侧面会显示黑色边框。
-* 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
+* 使用iOS 7,iPad上的最后一帧视频可能会失真。
 
 ## Scene7 Publishing System 6.9的错误修复 {#section-86dc0e8eb85241dbb449221becb12888}
 
@@ -227,5 +227,5 @@ HTML5视频查看器
 * Scene7Creative Suite扩展在此版本中被弃用，因为Creative Cloud应用程序不支持Flash面板。 内容摄取工作流的进一步开发将重点关注Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7,Scene7发布系统中的上传和导出功能将保留，并可以改用。
 * 由于采用率较低，UGC视频在此版本中被弃用。 设置另一个SPS帐户可用作UGC视频的替代解决方案。 请联系Adobe技术支持以设置其他帐户。
 * 由于采用率较低，此版本中已弃用文本连字。 连字词典定义了如何分割单词并用连字符进行连字，以支持最佳文本流。
-* 由于采用率较低，元数据服务器和相似性搜索将在2015年被弃用。 在公布正式弃用目标日期后，受影响的客户将收到Adobe技术支持的通知。
+* 由于采用率较低，元数据服务器和相似性搜索在2015年被弃用。 在宣布正式弃用目标日期后，Adobe技术支持会通知受影响的客户。
 * 提醒：自2014年1月31日起，Scene7正式停止对DHTML查看器平台的支持。
