--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
@@ -1,24 +1,26 @@
 ---
-title: 查看器发行说明(5.13.1)
-description: 查看器发行说明(5.13.1)
+title: Dynamic Media查看器发行说明(5.15.3)
+description: AdobeDynamic Media查看器的发行说明。
 solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
-exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
+exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
 source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '554'
+source-wordcount: '626'
 ht-degree: 0%
 
 ---
 
-# 查看器发行说明(5.13.1){#viewers-release-notes}
+# 查看器发行说明(5.15.3){#viewers-release-notes}
 
-## 包含的查看器 {#section-cd5bb5a6b81d4e0a8250f021a0583915}
+<!-- Updated January 13, 2021 for the 5.15.3 release-->
+
+## AdobeDynamic Media查看器 {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
 该包包含以下内容：
 
-* HTML5查看器
+* **HTML5查看器**
 
    * BasicZoomViewer
    * eCatalogViewer
@@ -29,7 +31,18 @@ ht-degree: 0%
    * VideoViewer
    * ZoomViewer
 
-* HTML5仅适用于移动设备的查看器（旧版，使用2.4 s7sdk）
+* **Adobe Experience Manager Dynamic Media查看器**
+
+   * 轮播查看器
+   * DimensionalViewer
+   * InteractiveImage
+   * InteractiveVideoViewer
+   * PanoramicViewer
+   * SmartCropVideoViewer
+   * Video360Viewer
+   * ZoomVerticalViewer
+
+* **HTML5仅适用于移动设备的查看器** （旧版，使用3.10 s7sdk）
 
    * basicZoomMobile
    * 飞行
@@ -37,27 +50,26 @@ ht-degree: 0%
    * genericZoomMobile
    * mixedMedia
 
-* Adobe Experience Manager Dynamic Media查看器
+## 5.15.3的新增增强功能 {#new-features-and-enhancements-5-15-3}
 
-   * 轮播查看器
-   * InteractiveImage
-   * InteractiveVideoViewer
-   * PanoramicViewer
-   * ZoomVerticalViewer
-   * Video360Viewer
+* 通过将旧版移动HTML5查看器的SDK版本更新为3.10，修复了XSS问题。Dynamic Media使用的新的现成HTML5查看器不受此XSS问题影响，因此不会更新它们。
 
-## 5.13.1的新增功能和增强功能 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## 5.15.2的新增增强功能 {#new-features-and-enhancements-5-15-2}
 
-* 添加了对与Launch Dynamic Media查看器扩展集成的支持。
-* 在Oculus Browser for Video360Viewer中添加了对VR操作模式的支持。
-* 添加了 `RolloverKeyEvent.HREF_ACTIVATED` 事件，以允许客户端代码响应eCatalogViewer和eCatalogSearchViewer中的图像映射激活。
+* 修复了对iOS上的本机视频播放UI的支持。
 
-## 5.13.1的错误修复 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
+## 5.15.1的新增功能和增强功能 {#new-features-and-enhancements-5-15-1}
 
-* 解决了显示不正确的长视频持续时间的问题。
-* 解决了在Apple设备(在iOS 12及更高版本上运行)上滚动页面的全屏视图问题。
+* 添加了对被动事件侦听器的支持。
+* 更新了DimensionalViewer中的3D渲染库，以更好地支持模型着色。
+* 禁用了不活动按钮的聚焦。
+* 改进了共享工具中的键盘控件和辅助技术支持。
+* 更正了iOS设备上的色板滚动行为。
+* 更正了eCatalog查看器中iOS设备上的页面翻转效果。
+* 已更正 `swatchoverlay` 修饰符行为。
+* 更正了在视频未在媒体集中排在首位的情况下，MixedMediaViewer中视频字幕的支持。
 
-## 5.13.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
+## 已知问题和限制 {#known-issues-and-restrictions}
 
 * “IS”(IS)命令中的“图像提供”(Image Serving)修饰符不会添加到 `req=set` 按设计请求。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
 
@@ -66,13 +78,13 @@ ht-degree: 0%
 * 缩放浏览器窗口会导致调整大小不正确。
 * iPad 2 — 大型eCatalog资产在iOS上崩溃Safari。
 
-**所有查看器**
+### 所有查看器 {#all-viewers}
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
 * 使用 `display:none` 不支持CSS或通过从父节点动态分离CSS。
 
-**HTML5所有查看器**
+### HTML5所有查看器 {#html5-all-viewers}
 
 * 在表格中嵌入查看器可能会导致查看器在非本机全屏模式下的大小或位置不正确。 Adobe建议您改用DIV。
 * 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖(例如， `zoomView.iconfeffect=0`)。
@@ -80,21 +92,21 @@ ht-degree: 0%
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * IS命令修饰符不支持影响图像大小的图像服务修饰符。
 
-**HTML5 eCatalog**
+### HTML5 eCatalog {#html5-ecatalog}
 
 * 导航到其他HTML页面，然后返回有时会导致查看器重置回第一个页面。
 * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
 * 内部链接仅指向多页跨页中最左侧的页面。 在纵向模式下影响移动设备。
 
-**HTML5混合媒体**
+### HTML5混合媒体 {#html5-mixed-media}
 
 * 不支持音轨播放。
 
-**HTML5 Social**
+### HTML5 Social {#html5-social}
 
 * 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符必须具有绝对URL。
 
-**HTML5视频**
+### HTML5视频 {#html5-video}
 
 * 海报图像可能会遇到 `max size` 错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
 * 如果托管HTML页面是从外部服务器(而不是Dynamic Media服务器)提供，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
