--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
@@ -1,11 +1,11 @@
 ---
+title: Dynamic Media查看器发行说明(5.12.1)
 description: Dynamic Media查看器发行说明(5.12.1)
 solution: Experience Manager
-title: Dynamic Media查看器发行说明(5.12.1)
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: d6db62d2-d780-48d6-bfa0-40fc4abd9a60
-source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
 source-wordcount: '603'
 ht-degree: 0%
@@ -14,7 +14,7 @@ ht-degree: 0%
 
 # 查看器发行说明(5.12.1){#viewers-release-notes}
 
-## Adobe[!DNL Dynamic Media]查看器 {#section-5460f4e254d44c5a95196e6cb657b7e4}
+## Adobe [!DNL Dynamic Media] 查看器 {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
 ## 包含的查看器 {#section-cd5bb5a6b81d4e0a8250f021a0583915}
 
@@ -31,7 +31,7 @@ ht-degree: 0%
    * VideoViewer
    * ZoomViewer
 
-* 仅适用于移动设备的HTML5查看器（旧版，使用2.4 s7sdk）
+* HTML5仅适用于移动设备的查看器（旧版，使用2.4 s7sdk）
 
    * basicZoomMobile
    * 飞行
@@ -39,7 +39,7 @@ ht-degree: 0%
    * genericZoomMobile
    * mixedMedia
 
-* Adobe Experience Manager [!DNL Dynamic Media]查看器
+* Adobe Experience Manager [!DNL Dynamic Media] 查看器
 
    * 轮播查看器
    * InteractiveImage
@@ -55,11 +55,11 @@ ht-degree: 0%
 ## 5.12.1的错误修复 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
 
 * 解决了显示不正确的长视频持续时间的问题。
-* 解决了在Apple设备（在iOS 12及更高版本上运行）上滚动页面的全屏视图问题。
+* 解决了在Apple设备(在iOS 12及更高版本上运行)上滚动页面的全屏视图问题。
 
 ## 5.12.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符不会按设计添加到`req=set`请求中。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
+* “IS”(IS)命令中的“图像提供”(Image Serving)修饰符不会添加到 `req=set` 按设计请求。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
@@ -70,18 +70,18 @@ ht-degree: 0%
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
-* 不支持使用`display:none` CSS或通过从父节点动态分离查看器来在DOM中添加或删除查看器。
+* 使用 `display:none` 不支持CSS或通过从父节点动态分离CSS。
 * 在表格中嵌入查看器可能会导致查看器在非本机全屏模式下的大小或位置不正确。 Adobe建议改用DIV。
-* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖（例如，`zoomView.iconfeffect=0`）。
-* 不支持“图像提供”命令`crop`。
+* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖(例如， `zoomView.iconfeffect=0`)。
+* 图像提供命令 `crop` 不支持。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * IS命令修饰符不支持影响图像大小的图像服务修饰符。
 
 **HTML5所有查看器**
 
 * 在表格中嵌入查看器可能会导致查看器在非本机全屏模式下的大小或位置不正确。 Adobe建议改用DIV。
-* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖（例如，`zoomView.iconfeffect=0`）。
-* 不支持“图像提供”命令`crop`。
+* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖(例如， `zoomView.iconfeffect=0`)。
+* 图像提供命令 `crop` 不支持。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * IS命令修饰符不支持影响图像大小的图像服务修饰符。
 
@@ -97,14 +97,14 @@ ht-degree: 0%
 
 **HTML5 Social**
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符必须具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符必须具有绝对URL。
 
 **HTML5视频**
 
-* 海报图像可能遇到`max size`错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
-* 如果从外部服务器(而非Dynamic Media服务器)提供托管HTML页面，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
+* 海报图像可能会遇到 `max size` 错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
+* 如果托管HTML页面是从外部服务器(而不是Dynamic Media服务器)提供，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
-* 在iPad或Android™设备上，可能会显示黑帧，而不是海报图像。
+* 在iPad或Android™设备上，可能会显示黑色框架，而不是海报图像。
 * 在iPad或Android™设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
 * 在iPad设备上，当背景设置为白色/透明时，VideoPlayer组件的侧边会显示黑色边框。
 * 在iPad上，使用iOS 7时，视频的最后一帧可能会失真。
