--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7查看器5.8.2发行说明
 description: Scene7查看器5.8.2发行说明
 solution: Experience Manager
-title: Scene7查看器5.8.2发行说明
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 458e11b1-74f3-4a70-87c8-49cef32acf00
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '631'
+source-wordcount: '621'
 ht-degree: 1%
 
 ---
@@ -18,21 +18,21 @@ ht-degree: 1%
 
 ## 5.8.2的错误修复 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
 
-* 如果`frametransition=turn`，则用户无法使用鼠标翻页。
+* 如果 `frametransition=turn`.
 * `ImageMapEffect.mapTips=1` 鼠标单击在启用了触屏的设备上生成脚本错误。
 
 ## 5.8.1的新增功能和增强功能 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * 基本缩放、弹出、混合媒体、旋转、缩放、视频、轮播、交互式图像和交互式视频中的键盘辅助功能。
 * 向视频查看器、混合媒体查看器和交互式视频查看器添加了视频缓冲图标。
-* `playback`修饰符的值`native`已弃用；请改用新值`progressive`。
+* 值 `native` of `playback` 修饰符已弃用；使用新值 `progressive` 中。
 
-* 为[!DNL Dynamic Media]视频添加了对HTTPS流播放的支持。
-* 在iPhone设备上添加了对内联视频播放的支持。
+* 为 [!DNL Dynamic Media] 视频。
+* 添加了对iPhone设备上内联视频播放的支持。
 * 向视频查看器添加了对外部视频播放的支持。
 * 改进了触控设备上的样本滚动行为。
 * 添加了对同时运行Internet Explorer 11和Edge浏览器的鼠标和触摸输入设备的支持。
-* 添加了在eCatalog查看器中的移动设备上以纵向模式为`initialframe`参数指定左页和右页的功能。
+* 添加了在 `initialframe` eCatalog查看器中移动设备上纵向模式的参数。
 
 ## 5.8.1的错误修复 {#section-867d7f16480f43d5ac0f6e3e4d77ad80}
 
@@ -41,22 +41,22 @@ ht-degree: 1%
 
 ## 5.8.2的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符不会按设计添加到`req=set`请求中。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
+* “IS”(IS)命令中的“图像提供”(Image Serving)修饰符不会添加到 `req=set` 按设计请求。 但是，仅影响图像显示的修饰符可以正常使用。 影响大小的修改量必须用于复杂资产。 例如：
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
 * 弹出查看器 — 鼠标关闭后，Internet Explorer 9有时仍保留在屏幕上。
 * 缩放浏览器窗口会导致调整大小不正确。
-* iPad 2 — 大型eCatalog资产在iOS上崩溃Safari。
+* iPad 2 — 一个大型eCatalog资产在iOS上崩溃了Safari。
 
 **所有查看器**
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
-* 不支持使用`display:none` CSS或通过从父节点动态分离查看器来在DOM中添加或删除查看器。
+* 使用 `display:none` 不支持CSS或通过从父节点动态分离CSS。
 * 在表格中嵌入查看器可能会导致查看器在非本机全屏模式下的大小或位置不正确。 Adobe建议改用DIV。
-* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖（例如，`zoomView.iconfeffect=0`）。
-* 不支持“图像提供”命令`crop`。
+* 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖(例如， `zoomView.iconfeffect=0`)。
+* 图像提供命令 `crop` 不支持。
 * 仅当查看器在子窗口中打开时，“关闭”按钮才有效。
 * IS命令修饰符不支持影响图像大小的图像服务修饰符。
 
@@ -73,17 +73,17 @@ ht-degree: 1%
 
 **社交网站**
 
-* 要在传出电子邮件中正确渲染缩略图，`serverurl`修饰符应具有绝对URL。
+* 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符应具有绝对URL。
 
 **视频**
 
-* 海报图像可能遇到`max size`错误。 您可能需要提高图像提供发布的限制设置。
-* 如果从外部服务器(而非Scene7服务器)提供托管HTML页面，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
+* 海报图像可能会遇到 `max size` 错误。 提高图像提供发布的限制设置。
+* 如果托管HTML页面是从外部服务器(而不是Scene7服务器)提供，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
-* 在iPad或Android设备上，可能会显示黑帧，而不是海报图像。
-* 在iPad或Android设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
+* 在iPad或Android™设备上，可能会显示黑色框架，而不是海报图像。
+* 在iPad或Android™设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
 * 在iPad设备上，当背景设置为白色/透明时，VideoPlayer组件的侧边会显示黑色边框。
 * 在iPad上，使用iOS 7时，视频的最后一帧可能会失真。
 * 在Chrome、Firefox和Internet Explorer浏览器上，在HLS流模式下的视频搜寻期间，可能会偶尔出现宏阻塞。
-* 首次访客时，海报图像可能无法在Microsoft Edge浏览器中显示。
+* 首次访客时，海报图像可能无法在Microsoft® Edge浏览器中显示。
 * 使用渐进式播放时，在Internet Explorer 9中加载视频后，海报图像可能会隐藏。
