--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -1,23 +1,23 @@
 ---
 title: Dynamic Media发行说明
-description: “AdobeDynamic Media Classic的最新发行说明，它是Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分。”
+description: “Adobe Dynamic Media Classic的最新发行说明，它是Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分。”
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1375'
+source-wordcount: '1359'
 ht-degree: 0%
 
 ---
 
 # Dynamic Media发行说明{#dynamic-media-release-notes}
 
-AdobeDynamic Media Classic部分(位于Adobe Experience Cloud的Adobe Experience Manager解决方案)的最新发行说明。
+Adobe Experience Cloud中Adobe Dynamic Media Classic部分的Adobe Experience Manager解决方案的最新发行说明。
 
 ## Dynamic Media发行说明 {#topic-1f5af440670a42f3bbb662eb86a196c6}
 
-Adobe[!DNL Adobe Experience Cloud]中[!DNL Adobe Experience Manager]解决方案的Dynamic Media Classic部分的最新发行说明。
+Adobe Dynamic Media Classic部分的最新发行说明 [!DNL Adobe Experience Manager] 解决方案 [!DNL Adobe Experience Cloud].
 
 * [常规](s7rn2017.md#section-52afeb72ecb34c1585ea67a5051825a2)
 * [Scene7发布系统](s7rn2017.md#section-24487cb493444d808fb7193f0a00cdd4)
@@ -28,18 +28,18 @@ Adobe[!DNL Adobe Experience Cloud]中[!DNL Adobe Experience Manager]解决方案
 
 Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升的总体优势。
 
-请参阅[HTTP2内容交付常见问题解答](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html#dynamic)。
+请参阅 [HTTP2内容交付常见问题解答](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html#dynamic).
 
 ## Scene7发布系统 {#section-24487cb493444d808fb7193f0a00cdd4}
 
-有关完整文档，请参阅[https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
+有关完整文档，请参阅  [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
 
 **新增功能、增强功能和错误修复**
 
-* 从[!DNL Adobe Scene7 Publishing System]用户界面中删除了视频剪辑功能。
+* 删除了 [!DNL Adobe Scene7 Publishing System] 用户界面。
 * 在必要和可能的情况下，为所有Scene7 Servlet添加了身份验证。
 * 修复了与垃圾桶中的列表视图有关的错误。
-* 出于安全考虑，已从“用户管理”中删除了&#x200B;**创建SPSAdmin**&#x200B;用户功能。
+* 已删除 **创建SPSAdmin** 用户管理中的用户功能。
 * FTP WebAdmin现在支持OKTA身份验证。
 * 删除了为新Media Portal用户创建的默认密码功能。
 * 错误修复，涉及在添加新用户时生成的临时密码。 密码不符合必要的密码要求。
@@ -49,23 +49,23 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 * 修复了以下错误：向新Scene7用户发送的欢迎电子邮件，这些用户未包含用于控制某些设置的身份验证。
 * 修复了以下错误：如果任何文件夹的名称中包含特殊字符，则无法检索FTP文件夹列表。
 * 为Scene7环境配置OKTA服务提供程序。
-* 添加了对查看器分析的Marketing Cloud组织ID的支持。
+* 添加了对查看器分析的Experience Cloud组织ID的支持。
 * 已实施Scene7 SAML使用者。
 
 ## 查看器（图像提供5.8.1） {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
+有关完整文档，请参阅 [查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
 **图像提供5.8.1的新增功能**
 
 * HTML5基本缩放查看器、弹出查看器、混合媒体查看器、旋转查看器、缩放查看器、视频查看器、轮播查看器、交互式图像查看器和交互式视频查看器中的键盘辅助功能。
 * 向视频查看器、混合媒体查看器和交互式视频查看器添加了视频缓冲图标。
 * “playback”修饰符的值“native”已弃用。 请改用新值“progressive”。
-* 在iPhone设备上添加了对内联视频播放的支持。
+* 添加了对iPhone设备上内联视频播放的支持。
 * 向视频查看器添加了对外部视频播放的支持。
 * 改进了触控设备上的样本滚动行为。
 * 添加了对同时运行Internet Explorer 11和Edge浏览器的鼠标和触摸输入设备的支持。
-* 添加了在eCatalog查看器中的移动设备上以纵向模式为`initialframe`参数指定左页和右页的功能。
+* 添加了在 `initialframe` eCatalog查看器中移动设备上纵向模式的参数。
 
 **图像提供5.8.1的错误修复**
 
@@ -74,20 +74,20 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 
 **兼容性说明**
 
-* Blackberry
+* BlackBerry®
 
-   * 与旧版AVS集不兼容。 客户端可能需要重新上传AVS集以允许播放。
+   * 与旧版AVS集不兼容。 客户端必须重新上传AVS集才能允许播放。
 
 * 常规
 
-   * 当用户放大到页面时，浏览器端缩放可能会导致用户界面和图像变得模糊。 UI格式设置可能也会因缩放而显示不正确。 这将全屏显示。
+   * 当用户放大到页面时，浏览器端缩放可能会导致用户界面和图像变得模糊。 UI格式设置可能也会因缩放而显示不正确。 这种效果全屏传播。
    * 由于移动设备存在大小限制，混合媒体查看器使用幻灯片手势来交换嵌入图像集中的帧，而不是点按嵌入的色板组件。 该组件作为可视指示器存在。
    * 在Internet Explorer浏览器和某些触控设备中，全屏模式不占用整个设备屏幕。 而是将应用程序的大小调整为浏览器窗口的大小。
-   * “关闭”按钮在iOS 8.0和8.1中不起作用，但在iOS 8.2中不再出现
+   * “关闭”按钮不适用于iOS 8.0和8.1，但不再出现在iOS 8.2中
 
 * 银河二世
 
-   * 缩放和eCatalog HTML5查看器出现内存泄漏。 在框架中重复导航可能会导致浏览器崩溃。
+   * 在缩放和eCatalogHTML5查看器中出现内存泄漏。 在框架中重复导航可能会导致浏览器崩溃。
    * 双击查看器可能会导致整个页面缩放，而不是只显示启用了浏览器端缩放的查看器。
 
 * 银河S4
@@ -104,26 +104,26 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 
 * HTC移动设备
 
-   * 我们的发现显示，无法禁用本机捏合缩放是HTC UI包装器(HTC Sense)的“功能”。 当对查看器使用“捏合缩放”手势时，这可能会导致整个页面缩放。 建议改用双击。
+   * HTC移动设备在Adobe的发现中显示，无法禁用本机捏合缩放是HTC UI包装器(HTC Sense)的“功能”。 当在查看器上使用“捏合缩放”手势时，此问题可能会导致整个页面缩放。 建议改用双击。
    * 如果图像映射较小且很接近，则图像映射图标可能会重叠。
 
 * HTML5视频
 
    * Internet Explorer 9:自定义海报图像不显示。
-   * `IntialBitRate` 仅软件HLS和FlashHDS播放支持修饰符。当播放使用本机播放器时，该函数不起作用。
-   * 目前不支持OGG和WebM渐进式播放。
-   * 浏览器缩放可能会导致视频播放器以不正确的大小显示（包括Windows OS控制面板显示设置）
+   * `IntialBitRate` 仅软件HLS和FlashHDS播放支持修饰符。 当播放使用本机播放器时，该函数不起作用。
+   * 当前不支持OGG和WebM渐进式播放。
+   * 浏览器缩放可能会导致视频播放器以不正确的大小显示（包括Windows OS控制面板显示设置）。
    * 在Safari上使用HLS流播放的视频搜寻可能不一致。
 
 * Internet Explorer
 
-   * 目前不支持Quirks模式。
+   * 当前不支持Quirks模式。
    * 当前不支持兼容模式。
    * 当前不支持移动设备上的Internet Explorer。
 
 * iOS
 
-   * 大型eCatalog可能导致iPad 2上的浏览器崩溃。
+   * 大型eCatalogs可能导致iPad 2上的浏览器崩溃。
 
 * Safari
 
@@ -133,56 +133,56 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 
 **已知问题和限制**
 
-* 从`iscommands`开始的图像服务修饰符不会按设计添加到`req=set`请求中。 仅影响图像显示的修饰符可以正常工作。 影响大小的修改量必须用于复杂资产。 例如，
+* 图像服务修饰符 `iscommands` 未添加到 `req=set` 按设计请求。 仅影响图像显示的修饰符可以正常工作。 影响大小的修改量必须用于复杂资产。 例如，
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
-* [] 关闭鼠标后，FlyoutIE9有时会停留在屏幕上。
+* [弹出] 鼠标关闭后，IE9有时会停留在屏幕上。
 * 浏览器缩放会导致调整大小错误。
 * iPad 2:大型eCatalog资产会在iOS上导致Safari崩溃。
 * 所有查看器
 
    * 不支持水印、模糊处理和锁定。
    * 不支持图像预设。
-   * 目前不支持使用`display:none` CSS或通过从父节点动态分离查看器来在DOM中添加或删除查看器。
+   * 使用 `display:none` 当前不支持CSS或通过从父节点动态分离CSS。
 
 * HTML5所有查看器
 
    * 在表格中嵌入查看器可能会导致在非本机全屏模式下查看器的大小或位置不正确。 建议改用DIV。
-   * 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖（例如，`zoomView.iconfeffect=0`）。
+   * 代码中具有显式实例名称的参数要求URL中的实例名称并被覆盖(例如， `zoomView.iconfeffect=0`)。
    * 当前不支持图像提供命令裁剪。
    * 仅当查看器在子窗口中打开时，“关闭”按钮才可工作。
-   * `iscommands`修饰符不支持影响图像大小的图像服务修饰符。
+   * 的 `iscommands` 修饰符不支持影响图像大小的图像服务修饰符。
 
 * HTML5 eCatalog
 
-   * 导航到其他HTML页面并返回时，查看器有时会重置回第一页。
+   * 导航到其他HTML页面并返回有时会导致查看器重置回第一页。
    * 旋转iOS设备后，页面布局有时显示不正确。 放大页面可更正布局。
    * 内部仅链接到多页面跨页中最左侧的页面。 在纵向模式下影响移动设备。
    * 由于浏览器限制，打印功能在IE9中不可用。
 
 * HTML5混合媒体
 
-   * 当前不支持音轨播放。
+   * 不支持音轨播放。
 
 * HTML5 Social
 
-   * 要在传出电子邮件中正确呈现缩略图，`serverurl`修饰符必须具有绝对URL。
+   * 要在传出电子邮件中正确渲染缩略图，请 `serverurl` 修饰符必须具有绝对URL。
 
 * HTML5视频
 
-   * 海报图像可能会遇到“最大大小”错误。 公司可能需要提高图像服务发布的限制设置。
-   * 如果托管HTML页面的是从外部服务器(而不是Dynamic Media服务器)提供，则视频字幕需要公司规则集。 请联系Adobe支持以获取帮助。
-   * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比
-   * 在iPad或Android设备上，可能会显示黑帧而不是海报图像。
-   * 在iPad或Android设备上加载查看器期间，黑帧可能会在屏幕上闪烁。
+   * 海报图像可能会遇到“最大大小”错误。 公司必须提高图像服务发布的限制设置。
+   * 如果托管HTML页面是从外部服务器(而不是Dynamic Media服务器)提供的，则视频字幕需要公司规则集。 请联系Adobe支持以获取帮助。
+   * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
+   * 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
+   * 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
    * 当在iPad设备上将背景设置为白色/透明时，VideoPlayer组件的侧面会显示黑色边框。
-   * 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
+   * 使用iOS 7,iPad上的最后一帧视频可能会失真。
    * 在Chrome、Firefox和Internet Explorer浏览器的HLS流模式下，在视频搜寻期间，可能会偶尔发生宏阻塞。
-   * 首次访客时，海报图像可能无法在Microsoft Edge浏览器中显示。
+   * 首次访客时，海报图像可能无法在Microsoft® Edge浏览器中显示。
    * 当使用渐进式播放时，在Internet Explorer 9中加载视频后，海报图像可能会隐藏。
 
 ## Dynamic Media图像提供6.3.2和图像呈现6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
 
-* IC实用程序 — 不再支持`downsample2x2`标记。 此标记质量较差，IPS不再使用2x2下采样器。
-* CORS标头 — 当前，为`/is/content/`请求配置了CORS标头。
+* IC实用程序 —  `downsample2x2` 标记不再受支持。 此标记质量较差，IPS不再使用2x2下采样器。
+* CORS标头 — 当前，为 `/is/content/` 请求。
